commit bilingual contents

--- a/docs/visual-basic/misc/bc30604.md
+++ b/docs/visual-basic/misc/bc30604.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30604
 ms.assetid: ce4759fe-5e49-43ad-8405-a3f46ed0a36f
-ms.openlocfilehash: 5e07e6cd85f22a24530aef886c4b0ac934cf2b89
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 53e934703a4f33ae8cfef58dc18849cadaa051d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61759661"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389954"
 ---
-# <a name="statement-cannot-appear-within-an-interface-body-visual-basic-error"></a><span data-ttu-id="87e74-102">L'istruzione non può trovarsi all'interno di un corpo di interfaccia (errore di Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="87e74-102">Statement cannot appear within an interface body (Visual Basic Error)</span></span>
-<span data-ttu-id="87e74-103">È stato rilevato un costrutto di linguaggio non previsto.</span><span class="sxs-lookup"><span data-stu-id="87e74-103">An unexpected language construct was encountered.</span></span> <span data-ttu-id="87e74-104">Si presuppone che manchi un costrutto `End Interface` e che tutto il codice sorgente dopo questo punto si trovi all'esterno dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="87e74-104">It is assumed that an `End Interface` construct is missing and that any source code after this point is outside the interface.</span></span>  
+# <a name="statement-cannot-appear-within-an-interface-body-visual-basic-error"></a><span data-ttu-id="63501-102">L'istruzione non può trovarsi all'interno di un corpo di interfaccia (errore di Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="63501-102">Statement cannot appear within an interface body (Visual Basic Error)</span></span>
+<span data-ttu-id="63501-103">È stato rilevato un costrutto di linguaggio non previsto.</span><span class="sxs-lookup"><span data-stu-id="63501-103">An unexpected language construct was encountered.</span></span> <span data-ttu-id="63501-104">Si presuppone che manchi un costrutto `End Interface` e che tutto il codice sorgente dopo questo punto si trovi all'esterno dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="63501-104">It is assumed that an `End Interface` construct is missing and that any source code after this point is outside the interface.</span></span>  
   
- <span data-ttu-id="87e74-105">**ID errore:** BC30604</span><span class="sxs-lookup"><span data-stu-id="87e74-105">**Error ID:** BC30604</span></span>  
+ <span data-ttu-id="63501-105">**ID errore:** BC30604</span><span class="sxs-lookup"><span data-stu-id="63501-105">**Error ID:** BC30604</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="87e74-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="87e74-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="63501-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="63501-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="87e74-107">Verificare la sintassi del codice usato all'interno della definizione di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="87e74-107">Verify the syntax of the code used inside the interface definition.</span></span>  
+1. <span data-ttu-id="63501-107">Verificare la sintassi del codice usato all'interno della definizione di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="63501-107">Verify the syntax of the code used inside the interface definition.</span></span>  
   
-2. <span data-ttu-id="87e74-108">Verificare che la definizione dell'interfaccia termini con un costrutto `End Interface` .</span><span class="sxs-lookup"><span data-stu-id="87e74-108">Make sure that the interface definition ends with an `End Interface` construct.</span></span>  
+2. <span data-ttu-id="63501-108">Verificare che la definizione dell'interfaccia termini con un costrutto `End Interface` .</span><span class="sxs-lookup"><span data-stu-id="63501-108">Make sure that the interface definition ends with an `End Interface` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="87e74-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="87e74-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="63501-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="63501-109">See also</span></span>
 
-- [<span data-ttu-id="87e74-110">Interfacce</span><span class="sxs-lookup"><span data-stu-id="87e74-110">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [<span data-ttu-id="87e74-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="87e74-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="63501-110">Interfacce</span><span class="sxs-lookup"><span data-stu-id="63501-110">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="63501-111">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="63501-111">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
