--- a/docs/visual-basic/misc/bc31187.md
+++ b/docs/visual-basic/misc/bc31187.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC31187
 ms.assetid: 64c6a033-7cdc-48a0-bff0-bdd045cb13ad
-ms.openlocfilehash: f7f2577696ac71654f880d08f4815577073dacfc
-ms.sourcegitcommit: 8a0fe8a2227af612f8b8941bdb8b19d6268748e7
+ms.openlocfilehash: b9be41af0c2afefa14afc38a1f2f31c39bdb0ea6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/03/2019
-ms.locfileid: "71835212"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405378"
 ---
-# <a name="namespace-declaration-must-start-with-xmlns"></a><span data-ttu-id="9090c-102">La dichiarazione dello spazio dei nomi deve iniziare con 'xmlns'</span><span class="sxs-lookup"><span data-stu-id="9090c-102">Namespace declaration must start with 'xmlns'</span></span>
-<span data-ttu-id="9090c-103">Un spazio dei nomi XML è stato specificato senza l'identificatore `xmlns` obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="9090c-103">An XML namespace has been specified without the required `xmlns` identifier.</span></span> <span data-ttu-id="9090c-104">L'identificatore `xmlns` deve contenere solo caratteri minuscoli.</span><span class="sxs-lookup"><span data-stu-id="9090c-104">The `xmlns` identifier must contain only lowercase characters.</span></span>  
+# <a name="namespace-declaration-must-start-with-xmlns"></a><span data-ttu-id="95e99-102">La dichiarazione dello spazio dei nomi deve iniziare con 'xmlns'</span><span class="sxs-lookup"><span data-stu-id="95e99-102">Namespace declaration must start with 'xmlns'</span></span>
+<span data-ttu-id="95e99-103">Un spazio dei nomi XML è stato specificato senza l'identificatore `xmlns` obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="95e99-103">An XML namespace has been specified without the required `xmlns` identifier.</span></span> <span data-ttu-id="95e99-104">L'identificatore `xmlns` deve contenere solo caratteri minuscoli.</span><span class="sxs-lookup"><span data-stu-id="95e99-104">The `xmlns` identifier must contain only lowercase characters.</span></span>  
   
- <span data-ttu-id="9090c-105">**ID errore:** BC31187</span><span class="sxs-lookup"><span data-stu-id="9090c-105">**Error ID:** BC31187</span></span>  
+ <span data-ttu-id="95e99-105">**ID errore:** BC31187</span><span class="sxs-lookup"><span data-stu-id="95e99-105">**Error ID:** BC31187</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9090c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9090c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="95e99-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="95e99-106">To correct this error</span></span>  
   
-- <span data-ttu-id="9090c-107">Usare l'identificatore `xmlns` quando si dichiara uno spazio dei nomi XML.</span><span class="sxs-lookup"><span data-stu-id="9090c-107">Use the `xmlns` identifier when you declare an XML namespace.</span></span> <span data-ttu-id="9090c-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="9090c-108">The following is an example:</span></span>
+- <span data-ttu-id="95e99-107">Usare l'identificatore `xmlns` quando si dichiara uno spazio dei nomi XML.</span><span class="sxs-lookup"><span data-stu-id="95e99-107">Use the `xmlns` identifier when you declare an XML namespace.</span></span> <span data-ttu-id="95e99-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="95e99-108">The following is an example:</span></span>
   
 ```vb  
 Imports <xmlns:ns="http://SampleNamespace">  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="9090c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9090c-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="95e99-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="95e99-109">See also</span></span>
 
-- [<span data-ttu-id="9090c-110">Istruzione Imports (spazio dei nomi XML)</span><span class="sxs-lookup"><span data-stu-id="9090c-110">Imports Statement (XML Namespace)</span></span>](../../visual-basic/language-reference/statements/imports-statement-xml-namespace.md)
-- [<span data-ttu-id="9090c-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="9090c-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="9090c-112">XML</span><span class="sxs-lookup"><span data-stu-id="9090c-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="95e99-110">Istruzione Imports (spazio dei nomi XML)</span><span class="sxs-lookup"><span data-stu-id="95e99-110">Imports Statement (XML Namespace)</span></span>](../language-reference/statements/imports-statement-xml-namespace.md)
+- [<span data-ttu-id="95e99-111">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="95e99-111">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="95e99-112">XML</span><span class="sxs-lookup"><span data-stu-id="95e99-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
