--- a/docs/visual-basic/misc/bc32055.md
+++ b/docs/visual-basic/misc/bc32055.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo<typename>'' non può ereditare da un parametro di tipo
+title: Il typo '<typename>' non può ereditare da un parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32055
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32055
 ms.assetid: 97af7cad-6e40-41e3-892d-1fbcbd86356d
-ms.openlocfilehash: 11a8963d413ce75b2d2a60aa30e58ab87f985314
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8953bb1d948f6e0025bc9be0e2f6b669d065a420
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667527"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411996"
 ---
-# <a name="type-typename-cannot-inherit-from-a-type-parameter"></a><span data-ttu-id="aa41d-102">Il tipo\<' typeName >' non può ereditare da un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="aa41d-102">Type '\<typename>' cannot inherit from a type parameter</span></span>
-<span data-ttu-id="aa41d-103">Una classe o interfaccia include un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) che specifica un parametro di tipo generico.</span><span class="sxs-lookup"><span data-stu-id="aa41d-103">A class or interface includes an [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) specifying a generic type parameter.</span></span>  
+# <a name="type-typename-cannot-inherit-from-a-type-parameter"></a><span data-ttu-id="9e88b-102">Il typo '\<typename>' non può ereditare da un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="9e88b-102">Type '\<typename>' cannot inherit from a type parameter</span></span>
+<span data-ttu-id="9e88b-103">Una classe o interfaccia include un' [Inherits Statement](../language-reference/statements/inherits-statement.md) che specifica un parametro di tipo generico.</span><span class="sxs-lookup"><span data-stu-id="9e88b-103">A class or interface includes an [Inherits Statement](../language-reference/statements/inherits-statement.md) specifying a generic type parameter.</span></span>  
   
- <span data-ttu-id="aa41d-104">Un tipo non può ereditare da un tipo non ancora definito.</span><span class="sxs-lookup"><span data-stu-id="aa41d-104">A type cannot inherit from a type that is not yet defined.</span></span> <span data-ttu-id="aa41d-105">L'ereditarietà presuppone la capacità di riutilizzare membri della classe base, che a sua volta richiede la definizione di questi membri.</span><span class="sxs-lookup"><span data-stu-id="aa41d-105">Inheritance involves the ability to reuse members of the base class, which in turn requires that these members be defined.</span></span> <span data-ttu-id="aa41d-106">Un parametro di tipo generico è un segnaposto che dovrà essere sostituito da un tipo specifico fornito da un argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="aa41d-106">A generic type parameter is a placeholder that is to be replaced by a specific type supplied by a type argument.</span></span> <span data-ttu-id="aa41d-107">Di conseguenza, un tipo non può ereditare dal segnaposto.</span><span class="sxs-lookup"><span data-stu-id="aa41d-107">Therefore, a type cannot inherit from the placeholder.</span></span>  
+ <span data-ttu-id="9e88b-104">Un tipo non può ereditare da un tipo non ancora definito.</span><span class="sxs-lookup"><span data-stu-id="9e88b-104">A type cannot inherit from a type that is not yet defined.</span></span> <span data-ttu-id="9e88b-105">L'ereditarietà presuppone la capacità di riutilizzare membri della classe base, che a sua volta richiede la definizione di questi membri.</span><span class="sxs-lookup"><span data-stu-id="9e88b-105">Inheritance involves the ability to reuse members of the base class, which in turn requires that these members be defined.</span></span> <span data-ttu-id="9e88b-106">Un parametro di tipo generico è un segnaposto che dovrà essere sostituito da un tipo specifico fornito da un argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="9e88b-106">A generic type parameter is a placeholder that is to be replaced by a specific type supplied by a type argument.</span></span> <span data-ttu-id="9e88b-107">Di conseguenza, un tipo non può ereditare dal segnaposto.</span><span class="sxs-lookup"><span data-stu-id="9e88b-107">Therefore, a type cannot inherit from the placeholder.</span></span>  
   
- <span data-ttu-id="aa41d-108">**ID errore:** BC32055</span><span class="sxs-lookup"><span data-stu-id="aa41d-108">**Error ID:** BC32055</span></span>  
+ <span data-ttu-id="9e88b-108">**ID errore:** BC32055</span><span class="sxs-lookup"><span data-stu-id="9e88b-108">**Error ID:** BC32055</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aa41d-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aa41d-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9e88b-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9e88b-109">To correct this error</span></span>  
   
-- <span data-ttu-id="aa41d-110">Se il tipo che eredita deve ereditare da un altro tipo, usare un tipo specifico invece di un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="aa41d-110">If the inheriting type must inherit from another type, use a specific type instead of a type parameter.</span></span>  
+- <span data-ttu-id="9e88b-110">Se il tipo che eredita deve ereditare da un altro tipo, usare un tipo specifico invece di un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="9e88b-110">If the inheriting type must inherit from another type, use a specific type instead of a type parameter.</span></span>  
   
-- <span data-ttu-id="aa41d-111">Se il tipo di base deve essere rappresentato da un parametro di tipo generico, nessun altro tipo riuscirà a ereditare da esso.</span><span class="sxs-lookup"><span data-stu-id="aa41d-111">If the base type must be represented by a generic type parameter, no other type can inherit from it.</span></span> <span data-ttu-id="aa41d-112">Rimuovere l' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).</span><span class="sxs-lookup"><span data-stu-id="aa41d-112">Remove the [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).</span></span>  
+- <span data-ttu-id="9e88b-111">Se il tipo di base deve essere rappresentato da un parametro di tipo generico, nessun altro tipo riuscirà a ereditare da esso.</span><span class="sxs-lookup"><span data-stu-id="9e88b-111">If the base type must be represented by a generic type parameter, no other type can inherit from it.</span></span> <span data-ttu-id="9e88b-112">Rimuovere l' [Inherits Statement](../language-reference/statements/inherits-statement.md).</span><span class="sxs-lookup"><span data-stu-id="9e88b-112">Remove the [Inherits Statement](../language-reference/statements/inherits-statement.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aa41d-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aa41d-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9e88b-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9e88b-113">See also</span></span>
 
-- [<span data-ttu-id="aa41d-114">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="aa41d-114">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [<span data-ttu-id="aa41d-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="aa41d-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="9e88b-114">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9e88b-114">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="9e88b-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9e88b-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
