--- a/docs/visual-basic/misc/bc2006.md
+++ b/docs/visual-basic/misc/bc2006.md
@@ -1,5 +1,5 @@
 ---
-title: Opzione <optionname> richiede <argument>
+title: L'opzione <optionname> richiede<argument>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2006
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC2006
 ms.assetid: 36d7d25d-8da4-4b06-847f-f59b1d681224
-ms.openlocfilehash: b2bb918c6a883c9480177df36a0013925582c4de
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7db90c8e1613bc345c7575b46ac803ec64e39134
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605377"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367412"
 ---
-# <a name="option-optionname-requires-argument"></a><span data-ttu-id="786ca-102">Opzione \<nomeopzione > richiede \<argomento ></span><span class="sxs-lookup"><span data-stu-id="786ca-102">Option \<optionname> requires \<argument></span></span>
-<span data-ttu-id="786ca-103">Un argomento richiesto è stato omesso.</span><span class="sxs-lookup"><span data-stu-id="786ca-103">A required argument has been omitted.</span></span>  
+# <a name="option-optionname-requires-argument"></a><span data-ttu-id="618e3-102">L'opzione \<optionname> richiede\<argument></span><span class="sxs-lookup"><span data-stu-id="618e3-102">Option \<optionname> requires \<argument></span></span>
+<span data-ttu-id="618e3-103">Un argomento richiesto è stato omesso.</span><span class="sxs-lookup"><span data-stu-id="618e3-103">A required argument has been omitted.</span></span>  
   
- <span data-ttu-id="786ca-104">**ID errore:** BC2006</span><span class="sxs-lookup"><span data-stu-id="786ca-104">**Error ID:** BC2006</span></span>  
+ <span data-ttu-id="618e3-104">**ID errore:** BC2006</span><span class="sxs-lookup"><span data-stu-id="618e3-104">**Error ID:** BC2006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="786ca-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="786ca-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="618e3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="618e3-105">To correct this error</span></span>  
   
-- <span data-ttu-id="786ca-106">Specificare l'argomento mancante.</span><span class="sxs-lookup"><span data-stu-id="786ca-106">Supply the missing argument.</span></span>  
+- <span data-ttu-id="618e3-106">Specificare l'argomento mancante.</span><span class="sxs-lookup"><span data-stu-id="618e3-106">Supply the missing argument.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="786ca-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="786ca-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="618e3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="618e3-107">See also</span></span>
 
-- [<span data-ttu-id="786ca-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="786ca-108">Error Types</span></span>](../../visual-basic/programming-guide/language-features/error-types.md)
+- [<span data-ttu-id="618e3-108">Tipi di errore</span><span class="sxs-lookup"><span data-stu-id="618e3-108">Error Types</span></span>](../programming-guide/language-features/error-types.md)
