--- a/docs/visual-basic/misc/bc30211.md
+++ b/docs/visual-basic/misc/bc30211.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30211
 ms.assetid: 855795ce-8499-4525-a1de-cbb8ba364cd7
-ms.openlocfilehash: 60d6f846e76704f3a9f00a6c99d6d391bff73be6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 57d1b5bb6ffc081c2cea6a75e08a4624576739a7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64615027"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409179"
 ---
-# <a name="option-strict-on-requires-that-all-method-parameters-have-an-as-clause"></a><span data-ttu-id="14bd8-102">Option Strict On richiede che tutti i parametri dei metodi abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="14bd8-102">Option Strict On requires that all method parameters have an 'As' clause</span></span>
-<span data-ttu-id="14bd8-103">Un metodo contiene un parametro senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="14bd8-103">A method contains a parameter without an `As` clause.</span></span> <span data-ttu-id="14bd8-104">Quando `Option Strict` è On, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Sub GetData(ByVal filter As String)`.</span><span class="sxs-lookup"><span data-stu-id="14bd8-104">When `Option Strict` is on, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Sub GetData(ByVal filter As String)`.</span></span>  
+# <a name="option-strict-on-requires-that-all-method-parameters-have-an-as-clause"></a><span data-ttu-id="f3b65-102">Option Strict On richiede che tutti i parametri dei metodi abbiano una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="f3b65-102">Option Strict On requires that all method parameters have an 'As' clause</span></span>
+<span data-ttu-id="f3b65-103">Un metodo contiene un parametro senza una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="f3b65-103">A method contains a parameter without an `As` clause.</span></span> <span data-ttu-id="f3b65-104">Quando `Option Strict` è On, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Sub GetData(ByVal filter As String)`.</span><span class="sxs-lookup"><span data-stu-id="f3b65-104">When `Option Strict` is on, every variable, property, procedure argument, and function return must be declared with an `As` clause to specify its data type; for example, `Sub GetData(ByVal filter As String)`.</span></span>  
   
- <span data-ttu-id="14bd8-105">**ID errore:** BC30211</span><span class="sxs-lookup"><span data-stu-id="14bd8-105">**Error ID:** BC30211</span></span>  
+ <span data-ttu-id="f3b65-105">**ID errore:** BC30211</span><span class="sxs-lookup"><span data-stu-id="f3b65-105">**Error ID:** BC30211</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="14bd8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="14bd8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f3b65-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f3b65-106">To correct this error</span></span>  
   
-- <span data-ttu-id="14bd8-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="14bd8-107">Check to see whether the `As` keyword is misspelled.</span></span>  
+- <span data-ttu-id="f3b65-107">Verificare che la parola chiave `As` non sia digitata in modo errato.</span><span class="sxs-lookup"><span data-stu-id="f3b65-107">Check to see whether the `As` keyword is misspelled.</span></span>  
   
-- <span data-ttu-id="14bd8-108">Fornire una clausola `As` per la variabile dichiarata oppure usare `Option Strict` Off.</span><span class="sxs-lookup"><span data-stu-id="14bd8-108">Supply an `As` clause for the declared variable, or turn `Option Strict` off.</span></span>  
+- <span data-ttu-id="f3b65-108">Fornire una clausola `As` per la variabile dichiarata oppure usare `Option Strict` Off.</span><span class="sxs-lookup"><span data-stu-id="f3b65-108">Supply an `As` clause for the declared variable, or turn `Option Strict` off.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="14bd8-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="14bd8-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f3b65-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f3b65-109">See also</span></span>
 
-- [<span data-ttu-id="14bd8-110">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="14bd8-110">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [<span data-ttu-id="14bd8-111">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="14bd8-111">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
-- [<span data-ttu-id="14bd8-112">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="14bd8-112">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
+- [<span data-ttu-id="f3b65-110">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="f3b65-110">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="f3b65-111">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="f3b65-111">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="f3b65-112">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="f3b65-112">Function Statement</span></span>](../language-reference/statements/function-statement.md)
