--- a/docs/visual-basic/misc/bc30296.md
+++ b/docs/visual-basic/misc/bc30296.md
@@ -1,5 +1,5 @@
 ---
-title: L'interfaccia<interfacename>'' non può ereditare da se stessa:<message>
+title: "Un'interfaccia '<interfacename>' non può ereditare da se stessa: <message>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30296
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC30296
 ms.assetid: a5bc1ae2-2083-4e26-b8a4-3c4dd951fd27
-ms.openlocfilehash: 4b76430f6573af01166f010932ce80d72b0a920c
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5435f9345ee4e60c67e25059a39ec17ed3a41882
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406249"
 ---
-# <a name="interface-interfacename-cannot-inherit-from-itself-message"></a><span data-ttu-id="8317a-102">L'interfaccia\<' intervisiname >' non può ereditare \<da se stessa: Message ></span><span class="sxs-lookup"><span data-stu-id="8317a-102">Interface '\<interfacename>' cannot inherit from itself: \<message></span></span>
-<span data-ttu-id="8317a-103">Un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) nella definizione di un'interfaccia specifica la sua interfaccia personale.</span><span class="sxs-lookup"><span data-stu-id="8317a-103">An [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) in an interface definition specifies its own interface.</span></span>  
+# <a name="interface-interfacename-cannot-inherit-from-itself-message"></a><span data-ttu-id="2f270-102">Un'interfaccia '\<interfacename>' non può ereditare da se stessa: \<message></span><span class="sxs-lookup"><span data-stu-id="2f270-102">Interface '\<interfacename>' cannot inherit from itself: \<message></span></span>
+<span data-ttu-id="2f270-103">Un' [Inherits Statement](../language-reference/statements/inherits-statement.md) nella definizione di un'interfaccia specifica la sua interfaccia personale.</span><span class="sxs-lookup"><span data-stu-id="2f270-103">An [Inherits Statement](../language-reference/statements/inherits-statement.md) in an interface definition specifies its own interface.</span></span>  
   
- <span data-ttu-id="8317a-104">Un'interfaccia può ereditare da un'altra interfaccia, che le fornisce tutti i membri dell'interfaccia dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri.</span><span class="sxs-lookup"><span data-stu-id="8317a-104">An interface can inherit from another interface, which provides it with all the members of the interface it inherits from, so it does not have to define those members again.</span></span> <span data-ttu-id="8317a-105">Un'interfaccia di questo tipo è detta *interfaccia derivata*e l'interfaccia da cui eredita è detta *interfaccia di base*.</span><span class="sxs-lookup"><span data-stu-id="8317a-105">Such an interface is called a *derived interface*, and the interface it inherits from is called the *base interface*.</span></span>  
+ <span data-ttu-id="2f270-104">Un'interfaccia può ereditare da un'altra interfaccia, che le fornisce tutti i membri dell'interfaccia dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri.</span><span class="sxs-lookup"><span data-stu-id="2f270-104">An interface can inherit from another interface, which provides it with all the members of the interface it inherits from, so it does not have to define those members again.</span></span> <span data-ttu-id="2f270-105">Un'interfaccia di questo tipo è detta *interfaccia derivata*e l'interfaccia da cui eredita è detta *interfaccia di base*.</span><span class="sxs-lookup"><span data-stu-id="2f270-105">Such an interface is called a *derived interface*, and the interface it inherits from is called the *base interface*.</span></span>  
   
- <span data-ttu-id="8317a-106">Per un'interfaccia ereditare da se stessa non ha significato, perché possiede già tutti i suoi membri personali.</span><span class="sxs-lookup"><span data-stu-id="8317a-106">It is meaningless for an interface to inherit from itself, because it already possesses all its own members.</span></span>  
+ <span data-ttu-id="2f270-106">Per un'interfaccia ereditare da se stessa non ha significato, perché possiede già tutti i suoi membri personali.</span><span class="sxs-lookup"><span data-stu-id="2f270-106">It is meaningless for an interface to inherit from itself, because it already possesses all its own members.</span></span>  
   
- <span data-ttu-id="8317a-107">**ID errore:** BC30296</span><span class="sxs-lookup"><span data-stu-id="8317a-107">**Error ID:** BC30296</span></span>  
+ <span data-ttu-id="2f270-107">**ID errore:** BC30296</span><span class="sxs-lookup"><span data-stu-id="2f270-107">**Error ID:** BC30296</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8317a-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8317a-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2f270-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2f270-108">To correct this error</span></span>  
   
-1. <span data-ttu-id="8317a-109">Controllare l'ortografia del nome dell'interfaccia nell'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="8317a-109">Check the spelling of the interface name in the `Inherits` statement.</span></span>  
+1. <span data-ttu-id="2f270-109">Controllare l'ortografia del nome dell'interfaccia nell'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="2f270-109">Check the spelling of the interface name in the `Inherits` statement.</span></span>  
   
-2. <span data-ttu-id="8317a-110">Se non si intende ereditare da un'interfaccia diversa, rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="8317a-110">If you do not intend to inherit from a different interface, remove the `Inherits` statement entirely.</span></span>  
+2. <span data-ttu-id="2f270-110">Se non si intende ereditare da un'interfaccia diversa, rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="2f270-110">If you do not intend to inherit from a different interface, remove the `Inherits` statement entirely.</span></span>  
   
-3. <span data-ttu-id="8317a-111">Esaminare il messaggio citato per ottenere suggerimenti.</span><span class="sxs-lookup"><span data-stu-id="8317a-111">Examine the cited message for suggestions.</span></span>  
+3. <span data-ttu-id="2f270-111">Esaminare il messaggio citato per ottenere suggerimenti.</span><span class="sxs-lookup"><span data-stu-id="2f270-111">Examine the cited message for suggestions.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8317a-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8317a-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2f270-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2f270-112">See also</span></span>
 
-- [<span data-ttu-id="8317a-113">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="8317a-113">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [<span data-ttu-id="8317a-114">Interfacce</span><span class="sxs-lookup"><span data-stu-id="8317a-114">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="2f270-113">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="2f270-113">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="2f270-114">Interfacce</span><span class="sxs-lookup"><span data-stu-id="2f270-114">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
