--- a/docs/visual-basic/misc/bc30607.md
+++ b/docs/visual-basic/misc/bc30607.md
@@ -1,5 +1,5 @@
 ---
-title: Le classi ' NotInheritable ' non possono avere membri<specifiername>dichiarati ''
+title: Le classi ' NotInheritable ' non possono avere membri dichiarati ' <specifiername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30607
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30607
 ms.assetid: c800e24e-d055-402f-b378-6d2f4041ff16
-ms.openlocfilehash: 1eb16f56d8ac8e5604e6aa50095d184948228657
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f0a3963372f39d9748b2df7169d290a6275efeeb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664884"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389941"
 ---
-# <a name="notinheritable-classes-cannot-have-members-declared-specifiername"></a><span data-ttu-id="a8c07-102">Le classi ' NotInheritable ' non possono avere membri\<dichiarati come ' specifiname >'</span><span class="sxs-lookup"><span data-stu-id="a8c07-102">'NotInheritable' classes cannot have members declared '\<specifiername>'</span></span>
-<span data-ttu-id="a8c07-103">Non è possibile usare gli identificatori di override con classi `NotInheritable` perché non è possibile eseguire l'override dei membri corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="a8c07-103">Override modifiers cannot be used with `NotInheritable` classes because their members cannot be overridden.</span></span>  
+# <a name="notinheritable-classes-cannot-have-members-declared-specifiername"></a><span data-ttu-id="da575-102">Le classi ' NotInheritable ' non possono avere membri dichiarati ' \<specifiername> '</span><span class="sxs-lookup"><span data-stu-id="da575-102">'NotInheritable' classes cannot have members declared '\<specifiername>'</span></span>
+<span data-ttu-id="da575-103">Non è possibile usare gli identificatori di override con classi `NotInheritable` perché non è possibile eseguire l'override dei membri corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="da575-103">Override modifiers cannot be used with `NotInheritable` classes because their members cannot be overridden.</span></span>  
   
- <span data-ttu-id="a8c07-104">**ID errore:** BC30607</span><span class="sxs-lookup"><span data-stu-id="a8c07-104">**Error ID:** BC30607</span></span>  
+ <span data-ttu-id="da575-104">**ID errore:** BC30607</span><span class="sxs-lookup"><span data-stu-id="da575-104">**Error ID:** BC30607</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a8c07-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8c07-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="da575-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="da575-105">To correct this error</span></span>  
   
-- <span data-ttu-id="a8c07-106">Rimuovere gli identificatori di override, come `Overridable`, `NotOverridable`o `MustOverride`, dalla definizione della classe.</span><span class="sxs-lookup"><span data-stu-id="a8c07-106">Remove override modifiers, such as `Overridable`, `NotOverridable`, or `MustOverride`, from the class definition.</span></span>  
+- <span data-ttu-id="da575-106">Rimuovere gli identificatori di override, come `Overridable`, `NotOverridable`o `MustOverride`, dalla definizione della classe.</span><span class="sxs-lookup"><span data-stu-id="da575-106">Remove override modifiers, such as `Overridable`, `NotOverridable`, or `MustOverride`, from the class definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a8c07-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8c07-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="da575-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="da575-107">See also</span></span>
 
-- [<span data-ttu-id="a8c07-108">Overridable</span><span class="sxs-lookup"><span data-stu-id="a8c07-108">Overridable</span></span>](../../visual-basic/language-reference/modifiers/overridable.md)
-- [<span data-ttu-id="a8c07-109">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="a8c07-109">NotOverridable</span></span>](../../visual-basic/language-reference/modifiers/notoverridable.md)
-- [<span data-ttu-id="a8c07-110">MustOverride</span><span class="sxs-lookup"><span data-stu-id="a8c07-110">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [<span data-ttu-id="a8c07-111">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="a8c07-111">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="da575-108">Overridable</span><span class="sxs-lookup"><span data-stu-id="da575-108">Overridable</span></span>](../language-reference/modifiers/overridable.md)
+- [<span data-ttu-id="da575-109">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="da575-109">NotOverridable</span></span>](../language-reference/modifiers/notoverridable.md)
+- [<span data-ttu-id="da575-110">MustOverride</span><span class="sxs-lookup"><span data-stu-id="da575-110">MustOverride</span></span>](../language-reference/modifiers/mustoverride.md)
+- [<span data-ttu-id="da575-111">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="da575-111">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
