--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-ms.openlocfilehash: 007f8fd6658e61240f28f7150ac5380630d70743
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4fe82551a2bf9006b138b9aae116d77ae0d002b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646700"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401160"
 ---
-# <a name="module-statement-must-end-with-a-matching-end-module"></a><span data-ttu-id="43da8-102">L'istruzione 'Module' deve terminare con un oggetto 'End Module' corrispondente</span><span class="sxs-lookup"><span data-stu-id="43da8-102">'Module' statement must end with a matching 'End Module'</span></span>
-<span data-ttu-id="43da8-103">I blocchi del modulo devono terminare con un'istruzione `End Module` .</span><span class="sxs-lookup"><span data-stu-id="43da8-103">Module blocks must end with an `End Module` statement.</span></span>  
+# <a name="module-statement-must-end-with-a-matching-end-module"></a><span data-ttu-id="144e0-102">L'istruzione 'Module' deve terminare con un oggetto 'End Module' corrispondente</span><span class="sxs-lookup"><span data-stu-id="144e0-102">'Module' statement must end with a matching 'End Module'</span></span>
+<span data-ttu-id="144e0-103">I blocchi del modulo devono terminare con un'istruzione `End Module` .</span><span class="sxs-lookup"><span data-stu-id="144e0-103">Module blocks must end with an `End Module` statement.</span></span>  
   
- <span data-ttu-id="43da8-104">**ID errore:** BC30625</span><span class="sxs-lookup"><span data-stu-id="43da8-104">**Error ID:** BC30625</span></span>  
+ <span data-ttu-id="144e0-104">**ID errore:** BC30625</span><span class="sxs-lookup"><span data-stu-id="144e0-104">**Error ID:** BC30625</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="43da8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="43da8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="144e0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="144e0-105">To correct this error</span></span>  
   
-- <span data-ttu-id="43da8-106">Aggiungere un'istruzione `End Module` alla fine del blocco `Module` .</span><span class="sxs-lookup"><span data-stu-id="43da8-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
+- <span data-ttu-id="144e0-106">Aggiungere un'istruzione `End Module` alla fine del blocco `Module` .</span><span class="sxs-lookup"><span data-stu-id="144e0-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="43da8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="43da8-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="144e0-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="144e0-107">See also</span></span>
 
-- [<span data-ttu-id="43da8-108">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="43da8-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="144e0-108">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="144e0-108">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
