--- a/docs/visual-basic/misc/bc31100.md
+++ b/docs/visual-basic/misc/bc31100.md
@@ -1,5 +1,5 @@
 ---
-title: Modificatore di accesso '<accessmodifier>' non è valido
+title: Il modificatore di accesso '<accessmodifier>' non è valido
 ms.date: 07/20/2015
 f1_keywords:
 - bc31100
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31100
 ms.assetid: 1cd71acc-0b54-4f64-8d61-75b272d293cb
-ms.openlocfilehash: 5f58ddd5b2b5a9d4963af07cde7c973c4979bd15
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d1de83274bcc735d9dc3abcff2b77833886d9242
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644174"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399384"
 ---
-# <a name="access-modifier-accessmodifier-is-not-valid"></a><span data-ttu-id="790e5-102">Modificatore di accesso '\<modificatoreaccesso >' non è valido</span><span class="sxs-lookup"><span data-stu-id="790e5-102">Access modifier '\<accessmodifier>' is not valid</span></span>
-<span data-ttu-id="790e5-103">Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-statement.md) oppure [istruzione Set](../../visual-basic/language-reference/statements/set-statement.md) specifica un livello di accesso meno restrittivo rispetto a quelli specificati per la proprietà che lo contiene.</span><span class="sxs-lookup"><span data-stu-id="790e5-103">A [Get Statement](../../visual-basic/language-reference/statements/get-statement.md) or [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) specifies an access level that is less restrictive than that specified for the containing property.</span></span>  
+# <a name="access-modifier-accessmodifier-is-not-valid"></a><span data-ttu-id="25f18-102">Il modificatore di accesso '\<accessmodifier>' non è valido</span><span class="sxs-lookup"><span data-stu-id="25f18-102">Access modifier '\<accessmodifier>' is not valid</span></span>
+<span data-ttu-id="25f18-103">Un' [istruzione Get](../language-reference/statements/get-statement.md) o un' [istruzione set](../language-reference/statements/set-statement.md) specifica un livello di accesso meno restrittivo rispetto a quello specificato per la proprietà che lo contiene.</span><span class="sxs-lookup"><span data-stu-id="25f18-103">A [Get Statement](../language-reference/statements/get-statement.md) or [Set Statement](../language-reference/statements/set-statement.md) specifies an access level that is less restrictive than that specified for the containing property.</span></span>  
   
- <span data-ttu-id="790e5-104">È sempre possibile specificare un livello di accesso per la proprietà.</span><span class="sxs-lookup"><span data-stu-id="790e5-104">You can always specify an access level for the property.</span></span> <span data-ttu-id="790e5-105">Inoltre, è possibile specificare un livello di accesso diverso al massimo per una delle routine della proprietà (`Get` o `Set`), sempre che sia più restrittiva rispetto al livello di accesso della proprietà.</span><span class="sxs-lookup"><span data-stu-id="790e5-105">In addition, you can specify a different access level for at most one of its property procedures (`Get` or `Set`), provided it is more restrictive than the property's access level.</span></span> <span data-ttu-id="790e5-106">Ad esempio, se la proprietà è `Friend`, è possibile specificare `Private` per una routine della proprietà, ma non `Public`.</span><span class="sxs-lookup"><span data-stu-id="790e5-106">For example, if the property is `Friend`, you can specify `Private` for a property procedure, but not `Public`.</span></span> <span data-ttu-id="790e5-107">Non è possibile specificare livelli di accesso per entrambe le routine della proprietà.</span><span class="sxs-lookup"><span data-stu-id="790e5-107">You cannot specify access levels for both of the property procedures.</span></span>  
+ <span data-ttu-id="25f18-104">È sempre possibile specificare un livello di accesso per la proprietà.</span><span class="sxs-lookup"><span data-stu-id="25f18-104">You can always specify an access level for the property.</span></span> <span data-ttu-id="25f18-105">Inoltre, è possibile specificare un livello di accesso diverso al massimo per una delle routine della proprietà (`Get` o `Set`), sempre che sia più restrittiva rispetto al livello di accesso della proprietà.</span><span class="sxs-lookup"><span data-stu-id="25f18-105">In addition, you can specify a different access level for at most one of its property procedures (`Get` or `Set`), provided it is more restrictive than the property's access level.</span></span> <span data-ttu-id="25f18-106">Ad esempio, se la proprietà è `Friend`, è possibile specificare `Private` per una routine della proprietà, ma non `Public`.</span><span class="sxs-lookup"><span data-stu-id="25f18-106">For example, if the property is `Friend`, you can specify `Private` for a property procedure, but not `Public`.</span></span> <span data-ttu-id="25f18-107">Non è possibile specificare livelli di accesso per entrambe le routine della proprietà.</span><span class="sxs-lookup"><span data-stu-id="25f18-107">You cannot specify access levels for both of the property procedures.</span></span>  
   
- <span data-ttu-id="790e5-108">**ID errore:** BC31100</span><span class="sxs-lookup"><span data-stu-id="790e5-108">**Error ID:** BC31100</span></span>  
+ <span data-ttu-id="25f18-108">**ID errore:** BC31100</span><span class="sxs-lookup"><span data-stu-id="25f18-108">**Error ID:** BC31100</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="790e5-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="790e5-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="25f18-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="25f18-109">To correct this error</span></span>  
   
-- <span data-ttu-id="790e5-110">Specificare un livello di accesso per la routine della proprietà più restrittivo di quello specificato per la proprietà o rimuovere il modificatore di accesso.</span><span class="sxs-lookup"><span data-stu-id="790e5-110">Make the access level for the property procedure more restrictive than for the property, or remove the access modifier entirely.</span></span>  
+- <span data-ttu-id="25f18-110">Specificare un livello di accesso per la routine della proprietà più restrittivo di quello specificato per la proprietà o rimuovere il modificatore di accesso.</span><span class="sxs-lookup"><span data-stu-id="25f18-110">Make the access level for the property procedure more restrictive than for the property, or remove the access modifier entirely.</span></span>  
   
-- <span data-ttu-id="790e5-111">Dichiarare il livello di accesso meno restrittivo nell' [Property Statement](../../visual-basic/language-reference/statements/property-statement.md)e quello più restrittivo in una delle routine della proprietà.</span><span class="sxs-lookup"><span data-stu-id="790e5-111">Declare the less restrictive access level in the [Property Statement](../../visual-basic/language-reference/statements/property-statement.md), and declare the more restrictive access level in one of the property procedures.</span></span>  
+- <span data-ttu-id="25f18-111">Dichiarare il livello di accesso meno restrittivo nell' [Property Statement](../language-reference/statements/property-statement.md)e quello più restrittivo in una delle routine della proprietà.</span><span class="sxs-lookup"><span data-stu-id="25f18-111">Declare the less restrictive access level in the [Property Statement](../language-reference/statements/property-statement.md), and declare the more restrictive access level in one of the property procedures.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="790e5-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="790e5-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="25f18-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="25f18-112">See also</span></span>
 
-- [<span data-ttu-id="790e5-113">Routine Property</span><span class="sxs-lookup"><span data-stu-id="790e5-113">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [<span data-ttu-id="790e5-114">Procedura: Dichiarare una proprietà con livelli di accesso misti</span><span class="sxs-lookup"><span data-stu-id="790e5-114">How to: Declare a Property with Mixed Access Levels</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
+- [<span data-ttu-id="25f18-113">Routine Property</span><span class="sxs-lookup"><span data-stu-id="25f18-113">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="25f18-114">Procedura: dichiarare una proprietà con livelli di accesso misti</span><span class="sxs-lookup"><span data-stu-id="25f18-114">How to: Declare a Property with Mixed Access Levels</span></span>](../programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
