--- a/docs/visual-basic/misc/bc31132.md
+++ b/docs/visual-basic/misc/bc31132.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'RaiseEvent' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' RaiseEvent ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31132
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31132
 ms.assetid: 8f3442fd-2ed1-4dbc-83a8-f0860ec022ac
-ms.openlocfilehash: e784e03833ad1d21983d7a899e35b0a2d1ee3acd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: eaaf4fdde0071da46725b1b668f21b15a1d2cdb0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61712436"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366008"
 ---
-# <a name="raiseevent-definition-missing-for-event-eventname"></a><span data-ttu-id="7e2f7-102">Definizione di 'RaiseEvent' mancante per l'evento '\<NomeEvento >'</span><span class="sxs-lookup"><span data-stu-id="7e2f7-102">'RaiseEvent' definition missing for event '\<eventname>'</span></span>
-<span data-ttu-id="7e2f7-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per la generazione dell'evento.</span><span class="sxs-lookup"><span data-stu-id="7e2f7-103">If an event is declared as `Custom`, it must supply a procedure for raising the event.</span></span>  
+# <a name="raiseevent-definition-missing-for-event-eventname"></a><span data-ttu-id="2589f-102">Manca la definizione di ' RaiseEvent ' per l'evento ' \<eventname> '</span><span class="sxs-lookup"><span data-stu-id="2589f-102">'RaiseEvent' definition missing for event '\<eventname>'</span></span>
+<span data-ttu-id="2589f-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per la generazione dell'evento.</span><span class="sxs-lookup"><span data-stu-id="2589f-103">If an event is declared as `Custom`, it must supply a procedure for raising the event.</span></span>  
   
- <span data-ttu-id="7e2f7-104">**ID errore:** BC31132</span><span class="sxs-lookup"><span data-stu-id="7e2f7-104">**Error ID:** BC31132</span></span>  
+ <span data-ttu-id="2589f-104">**ID errore:** BC31132</span><span class="sxs-lookup"><span data-stu-id="2589f-104">**Error ID:** BC31132</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7e2f7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7e2f7-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2589f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2589f-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="7e2f7-106">Includere una dichiarazione `RaiseEvent` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="7e2f7-106">Include a `RaiseEvent` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
+1. <span data-ttu-id="2589f-106">Includere una dichiarazione `RaiseEvent` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="2589f-106">Include a `RaiseEvent` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
   
-2. <span data-ttu-id="7e2f7-107">Verificare che le altre routine all'interno della dichiarazione di evento vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="7e2f7-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
+2. <span data-ttu-id="2589f-107">Verificare che le altre routine all'interno della dichiarazione di evento vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="2589f-107">Verify that other procedures within the event declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7e2f7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7e2f7-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2589f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2589f-108">See also</span></span>
 
-- [<span data-ttu-id="7e2f7-109">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="7e2f7-109">RaiseEvent Statement</span></span>](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="7e2f7-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="7e2f7-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="2589f-109">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="2589f-109">RaiseEvent Statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="2589f-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="2589f-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
