--- a/docs/visual-basic/misc/bc31167.md
+++ b/docs/visual-basic/misc/bc31167.md
@@ -1,5 +1,5 @@
 ---
-title: Previsto '-' tag di fine XML
+title: Previsto '-' per il tag di fine XML
 ms.date: 07/20/2015
 f1_keywords:
 - bc31167
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31167
 ms.assetid: c3380fba-48fe-4d45-8c92-43b0b48011eb
-ms.openlocfilehash: a2cee6bcb7528a3440362363e3dfd7ef4143f363
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 17fdfb5140e0ebea6e01683cb2402e94cbeb69ce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633799"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405469"
 ---
-# <a name="expected--for-xml-end-tag"></a><span data-ttu-id="93c64-102">Previsto '/' per il tag di fine XML</span><span class="sxs-lookup"><span data-stu-id="93c64-102">Expected '/' for XML end tag</span></span>
-<span data-ttu-id="93c64-103">Il tag di fine XML per un valore letterale XML è privo del carattere di chiusura richiesto '/'.</span><span class="sxs-lookup"><span data-stu-id="93c64-103">The XML end tag for an XML literal is missing the required '/' character.</span></span>  
+# <a name="expected--for-xml-end-tag"></a><span data-ttu-id="b229b-102">Previsto '/' per il tag di fine XML</span><span class="sxs-lookup"><span data-stu-id="b229b-102">Expected '/' for XML end tag</span></span>
+<span data-ttu-id="b229b-103">Il tag di fine XML per un valore letterale XML è privo del carattere di chiusura richiesto '/'.</span><span class="sxs-lookup"><span data-stu-id="b229b-103">The XML end tag for an XML literal is missing the required '/' character.</span></span>  
   
- <span data-ttu-id="93c64-104">**ID errore:** BC31167</span><span class="sxs-lookup"><span data-stu-id="93c64-104">**Error ID:** BC31167</span></span>  
+ <span data-ttu-id="b229b-104">**ID errore:** BC31167</span><span class="sxs-lookup"><span data-stu-id="b229b-104">**Error ID:** BC31167</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="93c64-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="93c64-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b229b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b229b-105">To correct this error</span></span>  
   
-- <span data-ttu-id="93c64-106">Aggiungere il carattere '/' all'inizio del tag di fine XML per il valore letterale XML.</span><span class="sxs-lookup"><span data-stu-id="93c64-106">Add the '/' character to the start of the XML end tag for the XML literal.</span></span>  
+- <span data-ttu-id="b229b-106">Aggiungere il carattere '/' all'inizio del tag di fine XML per il valore letterale XML.</span><span class="sxs-lookup"><span data-stu-id="b229b-106">Add the '/' character to the start of the XML end tag for the XML literal.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="93c64-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="93c64-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b229b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b229b-107">See also</span></span>
 
-- [<span data-ttu-id="93c64-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="93c64-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="93c64-109">XML</span><span class="sxs-lookup"><span data-stu-id="93c64-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="b229b-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="b229b-108">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="b229b-109">XML</span><span class="sxs-lookup"><span data-stu-id="b229b-109">XML</span></span>](../programming-guide/language-features/xml/index.md)
