--- a/docs/visual-basic/misc/bc32076.md
+++ b/docs/visual-basic/misc/bc32076.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo generico e richiede argomenti tipo"
+title: "' <typename> ' è un tipo generico e richiede argomenti di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - BC32076
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32076
 ms.assetid: 57f63727-c544-4012-8f03-5d77fbdd1135
-ms.openlocfilehash: d966650df9626980afbf2dc3f6071a037d815606
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 128e4f4660443b09a3504fa4b528d64257d973ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913057"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413713"
 ---
-# <a name="typename-is-a-generic-type-and-requires-type-arguments"></a><span data-ttu-id="7b898-102">'\<nomeTipo >' è un tipo generico e richiede argomenti tipo</span><span class="sxs-lookup"><span data-stu-id="7b898-102">'\<typename>' is a generic type and requires type arguments</span></span>
-<span data-ttu-id="7b898-103">Una variabile, un parametro di routine o il valore restituito da una funzione è dichiarato come avente il tipo di una classe o una struttura generica, ma la dichiarazione non fornisce alcun argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="7b898-103">A variable, procedure parameter, or function return is declared to have the type of a generic class or structure, but the declaration does not supply any type arguments.</span></span>  
+# <a name="typename-is-a-generic-type-and-requires-type-arguments"></a><span data-ttu-id="69a6e-102">' \<typename> ' è un tipo generico e richiede argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="69a6e-102">'\<typename>' is a generic type and requires type arguments</span></span>
+<span data-ttu-id="69a6e-103">Una variabile, un parametro di routine o il valore restituito da una funzione è dichiarato come avente il tipo di una classe o una struttura generica, ma la dichiarazione non fornisce alcun argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="69a6e-103">A variable, procedure parameter, or function return is declared to have the type of a generic class or structure, but the declaration does not supply any type arguments.</span></span>  
   
- <span data-ttu-id="7b898-104">Ogni classe e struttura generica è definita per sua natura con almeno un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="7b898-104">By its nature, every generic class and structure is defined with at least one type parameter.</span></span> <span data-ttu-id="7b898-105">Quando si usa un tipo generico per dichiarare una classe o una struttura costruita, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal tipo generico.</span><span class="sxs-lookup"><span data-stu-id="7b898-105">When you use a generic type to declare a constructed class or structure, you must supply a type argument for every type parameter defined by the generic type.</span></span>  
+ <span data-ttu-id="69a6e-104">Ogni classe e struttura generica è definita per sua natura con almeno un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="69a6e-104">By its nature, every generic class and structure is defined with at least one type parameter.</span></span> <span data-ttu-id="69a6e-105">Quando si usa un tipo generico per dichiarare una classe o una struttura costruita, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal tipo generico.</span><span class="sxs-lookup"><span data-stu-id="69a6e-105">When you use a generic type to declare a constructed class or structure, you must supply a type argument for every type parameter defined by the generic type.</span></span>  
   
- <span data-ttu-id="7b898-106">**ID errore:** BC32076</span><span class="sxs-lookup"><span data-stu-id="7b898-106">**Error ID:** BC32076</span></span>  
+ <span data-ttu-id="69a6e-106">**ID errore:** BC32076</span><span class="sxs-lookup"><span data-stu-id="69a6e-106">**Error ID:** BC32076</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7b898-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7b898-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="69a6e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="69a6e-107">To correct this error</span></span>  
   
-- <span data-ttu-id="7b898-108">Aggiungere un elenco di tipi alla dichiarazione racchiudendolo fra parentesi e iniziando con la parola chiave `Of` .</span><span class="sxs-lookup"><span data-stu-id="7b898-108">Add a type list to the declaration, enclosed in parentheses and beginning with the `Of` keyword.</span></span>  
+- <span data-ttu-id="69a6e-108">Aggiungere un elenco di tipi alla dichiarazione racchiudendolo fra parentesi e iniziando con la parola chiave `Of` .</span><span class="sxs-lookup"><span data-stu-id="69a6e-108">Add a type list to the declaration, enclosed in parentheses and beginning with the `Of` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7b898-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7b898-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="69a6e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="69a6e-109">See also</span></span>
 
-- [<span data-ttu-id="7b898-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7b898-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="7b898-111">Of</span><span class="sxs-lookup"><span data-stu-id="7b898-111">Of</span></span>](../../visual-basic/language-reference/statements/of-clause.md)
-- [<span data-ttu-id="7b898-112">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="7b898-112">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="69a6e-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="69a6e-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="69a6e-111">Di</span><span class="sxs-lookup"><span data-stu-id="69a6e-111">Of</span></span>](../language-reference/statements/of-clause.md)
+- [<span data-ttu-id="69a6e-112">Type List</span><span class="sxs-lookup"><span data-stu-id="69a6e-112">Type List</span></span>](../language-reference/statements/type-list.md)
