--- a/docs/visual-basic/misc/bc32303.md
+++ b/docs/visual-basic/misc/bc32303.md
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32303
 ms.assetid: eed6a16e-4a44-4f72-b1de-d4212940da37
-ms.openlocfilehash: 861488b2349baf2766c985c71bfb1b4aa65e108d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1fd88ec1adcd4a9e07c1ee43f032cd3e33f541dc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593128"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385964"
 ---
-# <a name="illegal-call-expression-or-index-expression"></a><span data-ttu-id="2abb3-102">L'espressione per la chiamata o l'indice non è valida</span><span class="sxs-lookup"><span data-stu-id="2abb3-102">Illegal call expression or index expression</span></span>
-<span data-ttu-id="2abb3-103">Un valore tra parentesi segue un'espressione che non è una routine, una proprietà o una matrice.</span><span class="sxs-lookup"><span data-stu-id="2abb3-103">A value in parentheses follows an expression that is not a procedure, property, or array.</span></span>  
+# <a name="illegal-call-expression-or-index-expression"></a><span data-ttu-id="89e85-102">L'espressione per la chiamata o l'indice non è valida</span><span class="sxs-lookup"><span data-stu-id="89e85-102">Illegal call expression or index expression</span></span>
+<span data-ttu-id="89e85-103">Un valore tra parentesi segue un'espressione che non è una routine, una proprietà o una matrice.</span><span class="sxs-lookup"><span data-stu-id="89e85-103">A value in parentheses follows an expression that is not a procedure, property, or array.</span></span>  
   
- <span data-ttu-id="2abb3-104">Il codice seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="2abb3-104">The following code can generate this error.</span></span>  
+ <span data-ttu-id="89e85-104">Il codice seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="89e85-104">The following code can generate this error.</span></span>  
   
  `Dim testVariable As Object = Nothing(1)`  
   
- <span data-ttu-id="2abb3-105">`Nothing` non accetta argomenti o indici, quindi non può essere usata con le parentesi.</span><span class="sxs-lookup"><span data-stu-id="2abb3-105">Because `Nothing` does not take arguments or indexes, you cannot use it with parentheses.</span></span>  
+ <span data-ttu-id="89e85-105">`Nothing` non accetta argomenti o indici, quindi non può essere usata con le parentesi.</span><span class="sxs-lookup"><span data-stu-id="89e85-105">Because `Nothing` does not take arguments or indexes, you cannot use it with parentheses.</span></span>  
   
- <span data-ttu-id="2abb3-106">**ID errore:** BC32303</span><span class="sxs-lookup"><span data-stu-id="2abb3-106">**Error ID:** BC32303</span></span>  
+ <span data-ttu-id="89e85-106">**ID errore:** BC32303</span><span class="sxs-lookup"><span data-stu-id="89e85-106">**Error ID:** BC32303</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2abb3-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2abb3-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="89e85-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="89e85-107">To correct this error</span></span>  
   
-- <span data-ttu-id="2abb3-108">Rimuovere le parentesi e i valori che racchiudono.</span><span class="sxs-lookup"><span data-stu-id="2abb3-108">Remove the parentheses and any value they contain.</span></span>  
+- <span data-ttu-id="89e85-108">Rimuovere le parentesi e i valori che racchiudono.</span><span class="sxs-lookup"><span data-stu-id="89e85-108">Remove the parentheses and any value they contain.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2abb3-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2abb3-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="89e85-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="89e85-109">See also</span></span>
 
-- [<span data-ttu-id="2abb3-110">Procedura: Chiamare una routine che restituisce un valore</span><span class="sxs-lookup"><span data-stu-id="2abb3-110">How to: Call a Procedure That Returns a Value</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-call-a-procedure-that-returns-a-value.md)
-- [<span data-ttu-id="2abb3-111">Procedura: Chiamare una routine che non restituisce un valore</span><span class="sxs-lookup"><span data-stu-id="2abb3-111">How to: Call a Procedure that Does Not Return a Value</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-call-a-procedure-that-does-not-return-a-value.md)
+- [<span data-ttu-id="89e85-110">Procedura: chiamare una routine che restituisce un valore</span><span class="sxs-lookup"><span data-stu-id="89e85-110">How to: Call a Procedure That Returns a Value</span></span>](../programming-guide/language-features/procedures/how-to-call-a-procedure-that-returns-a-value.md)
+- [<span data-ttu-id="89e85-111">Procedura: chiamare una routine che non restituisce un valore</span><span class="sxs-lookup"><span data-stu-id="89e85-111">How to: Call a Procedure that Does Not Return a Value</span></span>](../programming-guide/language-features/procedures/how-to-call-a-procedure-that-does-not-return-a-value.md)
 
-- [<span data-ttu-id="2abb3-112">Procedura: Inserire un valore in una proprietà</span><span class="sxs-lookup"><span data-stu-id="2abb3-112">How to: Put a Value in a Property</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-put-a-value-in-a-property.md)
-- [<span data-ttu-id="2abb3-113">Procedura: Ottenere un valore da una proprietà</span><span class="sxs-lookup"><span data-stu-id="2abb3-113">How to: Get a Value from a Property</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-get-a-value-from-a-property.md)
+- [<span data-ttu-id="89e85-112">Procedura: inserire un valore in una proprietà</span><span class="sxs-lookup"><span data-stu-id="89e85-112">How to: Put a Value in a Property</span></span>](../programming-guide/language-features/procedures/how-to-put-a-value-in-a-property.md)
+- [<span data-ttu-id="89e85-113">Procedura: ottenere un valore da una proprietà</span><span class="sxs-lookup"><span data-stu-id="89e85-113">How to: Get a Value from a Property</span></span>](../programming-guide/language-features/procedures/how-to-get-a-value-from-a-property.md)
