--- a/docs/visual-basic/misc/bc33006.md
+++ b/docs/visual-basic/misc/bc33006.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC33006
 ms.assetid: 20d3c843-e60c-4528-b737-0a97691f2153
-ms.openlocfilehash: f5d925e259f0550331db5d929a69f72ae90d8730
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93a519186da3e009ee66dd568d5d349d2db79b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648883"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385418"
 ---
-# <a name="end-operator-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="11678-102">'End Operator' deve essere la prima istruzione in una riga</span><span class="sxs-lookup"><span data-stu-id="11678-102">'End Operator' must be the first statement on a line</span></span>
-<span data-ttu-id="11678-103">Un'istruzione `End Operator` segue un separatore di istruzioni due punti (`:`).</span><span class="sxs-lookup"><span data-stu-id="11678-103">An `End Operator` statement follows a colon (`:`) statement separator.</span></span> <span data-ttu-id="11678-104">`End Operator` deve essere l'unica istruzione nella riga di origine.</span><span class="sxs-lookup"><span data-stu-id="11678-104">`End Operator` must be the only statement on its source line.</span></span>  
+# <a name="end-operator-must-be-the-first-statement-on-a-line"></a><span data-ttu-id="1275c-102">'End Operator' deve essere la prima istruzione in una riga</span><span class="sxs-lookup"><span data-stu-id="1275c-102">'End Operator' must be the first statement on a line</span></span>
+<span data-ttu-id="1275c-103">Un'istruzione `End Operator` segue un separatore di istruzioni due punti (`:`).</span><span class="sxs-lookup"><span data-stu-id="1275c-103">An `End Operator` statement follows a colon (`:`) statement separator.</span></span> <span data-ttu-id="1275c-104">`End Operator` deve essere l'unica istruzione nella riga di origine.</span><span class="sxs-lookup"><span data-stu-id="1275c-104">`End Operator` must be the only statement on its source line.</span></span>  
   
- <span data-ttu-id="11678-105">**ID errore:** BC33006</span><span class="sxs-lookup"><span data-stu-id="11678-105">**Error ID:** BC33006</span></span>  
+ <span data-ttu-id="1275c-105">**ID errore:** BC33006</span><span class="sxs-lookup"><span data-stu-id="1275c-105">**Error ID:** BC33006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="11678-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="11678-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1275c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1275c-106">To correct this error</span></span>  
   
-- <span data-ttu-id="11678-107">Suddividere più istruzioni su righe diverse.</span><span class="sxs-lookup"><span data-stu-id="11678-107">Separate the multiple statements onto different lines.</span></span>  
+- <span data-ttu-id="1275c-107">Suddividere più istruzioni su righe diverse.</span><span class="sxs-lookup"><span data-stu-id="1275c-107">Separate the multiple statements onto different lines.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="11678-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="11678-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1275c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1275c-108">See also</span></span>
 
-- [<span data-ttu-id="11678-109">Procedura: Interrompere e combinare istruzioni nel codice</span><span class="sxs-lookup"><span data-stu-id="11678-109">How to: Break and Combine Statements in Code</span></span>](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
-- [<span data-ttu-id="11678-110">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="11678-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="11678-111">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="11678-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="11678-112">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="11678-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="1275c-109">Procedura: Interrompere e combinare istruzioni nel codice</span><span class="sxs-lookup"><span data-stu-id="1275c-109">How to: Break and Combine Statements in Code</span></span>](../programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
+- [<span data-ttu-id="1275c-110">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="1275c-110">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="1275c-111">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="1275c-111">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="1275c-112">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="1275c-112">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
