--- a/docs/visual-basic/misc/bc36662.md
+++ b/docs/visual-basic/misc/bc36662.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente la riduzione in conversioni implicite tra l'espressione lambda e il delegato '<delegatename>'
+title: Option Strict On non consente la riduzione in conversioni implicite di tipi tra l'espressione lambda e il delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36662
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36662
 ms.assetid: 4504497b-56ba-4631-ad7b-59975f7fee04
-ms.openlocfilehash: b14f09cf08c665ed3c4453f2a30928371f78b508
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 275cc7029233963a5295f50c90b825ea0931b008
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912728"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385132"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-delegatename"></a><span data-ttu-id="482cf-102">Option Strict On non consente la riduzione in conversioni implicite tra l'espressione lambda e il delegato '\<NomeDelegato >'</span><span class="sxs-lookup"><span data-stu-id="482cf-102">Option Strict On does not allow narrowing in implicit type conversions between the lambda expression and delegate '\<delegatename>'</span></span>
-<span data-ttu-id="482cf-103">Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo tra il tipo di dati di un parametro in un delegato e il corrispondente parametro di un'espressione lambda assegnata a una variabile di quel tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="482cf-103">With `Option Strict` on, you cannot have a narrowing conversion between the data type of a parameter in a delegate and the corresponding parameter of a lambda expression assigned to a variable of that delegate type.</span></span> <span data-ttu-id="482cf-104">Nel codice seguente, ad esempio, il delegato `Del` ha un parametro di tipo `Integer`.</span><span class="sxs-lookup"><span data-stu-id="482cf-104">For example, in the following code, delegate `Del` has one parameter of type `Integer`.</span></span>  
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-delegatename"></a><span data-ttu-id="9e8ac-102">Option Strict On non consente la riduzione in conversioni implicite di tipi tra l'espressione lambda e il delegato ' \<delegatename> '</span><span class="sxs-lookup"><span data-stu-id="9e8ac-102">Option Strict On does not allow narrowing in implicit type conversions between the lambda expression and delegate '\<delegatename>'</span></span>
+<span data-ttu-id="9e8ac-103">Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo tra il tipo di dati di un parametro in un delegato e il corrispondente parametro di un'espressione lambda assegnata a una variabile di quel tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-103">With `Option Strict` on, you cannot have a narrowing conversion between the data type of a parameter in a delegate and the corresponding parameter of a lambda expression assigned to a variable of that delegate type.</span></span> <span data-ttu-id="9e8ac-104">Nel codice seguente, ad esempio, il delegato `Del` ha un parametro di tipo `Integer`.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-104">For example, in the following code, delegate `Del` has one parameter of type `Integer`.</span></span>  
   
 ```vb  
 Delegate Function Del(ByVal p As Integer) As String  
 ```  
   
- <span data-ttu-id="482cf-105">Di conseguenza, il parametro corrispondente di un'espressione lambda assegnata a una variabile di tipo `Del` può essere un `Integer` o qualsiasi tipo di dati per cui è disponibile una conversione verso un tipo di dati più grande da `Integer`.</span><span class="sxs-lookup"><span data-stu-id="482cf-105">Therefore, the corresponding parameter of any lambda expression assigned to a variable of type `Del` can be an `Integer` or any data type for which there is a widening conversion from `Integer`.</span></span>  
+ <span data-ttu-id="9e8ac-105">Di conseguenza, il parametro corrispondente di un'espressione lambda assegnata a una variabile di tipo `Del` può essere un `Integer` o qualsiasi tipo di dati per cui è disponibile una conversione verso un tipo di dati più grande da `Integer`.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-105">Therefore, the corresponding parameter of any lambda expression assigned to a variable of type `Del` can be an `Integer` or any data type for which there is a widening conversion from `Integer`.</span></span>  
   
 ```vb  
 ' Valid.  
@@ -32,21 +32,21 @@ Dim example2 As Del = Function(n As Long) "Valid"
 Dim example3 As Del = Function(n As Short) "Not Valid"  
 ```  
   
- <span data-ttu-id="482cf-106">**ID errore:** BC36662</span><span class="sxs-lookup"><span data-stu-id="482cf-106">**Error ID:** BC36662</span></span>  
+ <span data-ttu-id="9e8ac-106">**ID errore:** BC36662</span><span class="sxs-lookup"><span data-stu-id="9e8ac-106">**Error ID:** BC36662</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="482cf-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="482cf-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9e8ac-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9e8ac-107">To correct this error</span></span>  
   
-- <span data-ttu-id="482cf-108">Modificare il tipo di dati del parametro nel delegato o l'espressione lambda in modo che sia presente la relazione obbligatoria di conversione verso un tipo di dati più grande.</span><span class="sxs-lookup"><span data-stu-id="482cf-108">Change the data type of the parameter in the delegate or the lambda expression so that the required widening relationship exists.</span></span>  
+- <span data-ttu-id="9e8ac-108">Modificare il tipo di dati del parametro nel delegato o l'espressione lambda in modo che sia presente la relazione obbligatoria di conversione verso un tipo di dati più grande.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-108">Change the data type of the parameter in the delegate or the lambda expression so that the required widening relationship exists.</span></span>  
   
-- <span data-ttu-id="482cf-109">Non specificare tipi di dati di parametro nell'espressione lambda.</span><span class="sxs-lookup"><span data-stu-id="482cf-109">Do not specify parameter data types in the lambda expression.</span></span> <span data-ttu-id="482cf-110">I tipi saranno dedotti dai parametri corrispondenti nel delegato.</span><span class="sxs-lookup"><span data-stu-id="482cf-110">Types will be inferred from the corresponding parameters in the delegate.</span></span>  
+- <span data-ttu-id="9e8ac-109">Non specificare tipi di dati di parametro nell'espressione lambda.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-109">Do not specify parameter data types in the lambda expression.</span></span> <span data-ttu-id="9e8ac-110">I tipi saranno dedotti dai parametri corrispondenti nel delegato.</span><span class="sxs-lookup"><span data-stu-id="9e8ac-110">Types will be inferred from the corresponding parameters in the delegate.</span></span>  
   
 ```vb  
 Dim example4 As Del = Function(n) "Valid"  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="482cf-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="482cf-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9e8ac-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9e8ac-111">See also</span></span>
 
-- [<span data-ttu-id="482cf-112">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="482cf-112">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [<span data-ttu-id="482cf-113">Delegati</span><span class="sxs-lookup"><span data-stu-id="482cf-113">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)
-- [<span data-ttu-id="482cf-114">Conversioni di ampliamento e restrizione</span><span class="sxs-lookup"><span data-stu-id="482cf-114">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [<span data-ttu-id="482cf-115">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="482cf-115">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="9e8ac-112">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="9e8ac-112">Lambda Expressions</span></span>](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="9e8ac-113">Delegati</span><span class="sxs-lookup"><span data-stu-id="9e8ac-113">Delegates</span></span>](../programming-guide/language-features/delegates/index.md)
+- [<span data-ttu-id="9e8ac-114">Widening and Narrowing Conversions</span><span class="sxs-lookup"><span data-stu-id="9e8ac-114">Widening and Narrowing Conversions</span></span>](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [<span data-ttu-id="9e8ac-115">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="9e8ac-115">Relaxed Delegate Conversion</span></span>](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
