--- a/docs/visual-basic/misc/bc40020.md
+++ b/docs/visual-basic/misc/bc40020.md
@@ -1,5 +1,5 @@
 ---
-title: «<keyword>'della funzione di accesso di'<propertyname>' è obsoleto (avviso di Visual Basic)
+title: <keyword>la funzione di accesso '' di ' <propertyname> ' è obsoleta (Visual Basic avviso)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40020
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC40020
 ms.assetid: 005440f4-6e82-421c-b2ce-9c5139325bac
-ms.openlocfilehash: 2f7dfcba4f85f0925911c1a03cd1d4b1220f769d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a39723b4893efb7e90dfe4087841d00b7e0648b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794368"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384417"
 ---
-# <a name="keyword-accessor-of-propertyname-is-obsolete-visual-basic-warning"></a><span data-ttu-id="e3182-102">«\<parola chiave >' della funzione di accesso di '\<NomeProprietà >' è obsoleto (avviso di Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="e3182-102">'\<keyword>' accessor of '\<propertyname>' is obsolete (Visual Basic Warning)</span></span>
-<span data-ttu-id="e3182-103">Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corrispondente è stata contrassegnata con l'attributo <xref:System.ObsoleteAttribute> e la direttiva di considerarla come un avviso.</span><span class="sxs-lookup"><span data-stu-id="e3182-103">A statement attempts to read or write a property for which the corresponding procedure has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
+# <a name="keyword-accessor-of-propertyname-is-obsolete-visual-basic-warning"></a><span data-ttu-id="34a75-102">\<keyword>la funzione di accesso '' di ' \<propertyname> ' è obsoleta (Visual Basic avviso)</span><span class="sxs-lookup"><span data-stu-id="34a75-102">'\<keyword>' accessor of '\<propertyname>' is obsolete (Visual Basic Warning)</span></span>
+<span data-ttu-id="34a75-103">Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corrispondente è stata contrassegnata con l'attributo <xref:System.ObsoleteAttribute> e la direttiva di considerarla come un avviso.</span><span class="sxs-lookup"><span data-stu-id="34a75-103">A statement attempts to read or write a property for which the corresponding procedure has been marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as a warning.</span></span>  
   
- <span data-ttu-id="e3182-104">È possibile contrassegnare qualsiasi elemento di programmazione come non più in uso applicando <xref:System.ObsoleteAttribute> a tale elemento.</span><span class="sxs-lookup"><span data-stu-id="e3182-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="e3182-105">In questo caso, è possibile impostare la proprietà <xref:System.ObsoleteAttribute.IsError%2A> dell'attributo su `True` o `False`.</span><span class="sxs-lookup"><span data-stu-id="e3182-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="e3182-106">Se si imposta la proprietà su `True`, il compilatore considera il tentativo di usare l'elemento come un errore.</span><span class="sxs-lookup"><span data-stu-id="e3182-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="e3182-107">Se si imposta la proprietà su `False`, o si lascia l'impostazione predefinita `False`, il compilatore genera un avviso se si prova a usare l'elemento.</span><span class="sxs-lookup"><span data-stu-id="e3182-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
+ <span data-ttu-id="34a75-104">È possibile contrassegnare qualsiasi elemento di programmazione come non più in uso applicando <xref:System.ObsoleteAttribute> a tale elemento.</span><span class="sxs-lookup"><span data-stu-id="34a75-104">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="34a75-105">In questo caso, è possibile impostare la proprietà <xref:System.ObsoleteAttribute.IsError%2A> dell'attributo su `True` o `False`.</span><span class="sxs-lookup"><span data-stu-id="34a75-105">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="34a75-106">Se si imposta la proprietà su `True`, il compilatore considera il tentativo di usare l'elemento come un errore.</span><span class="sxs-lookup"><span data-stu-id="34a75-106">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="34a75-107">Se si imposta la proprietà su `False`, o si lascia l'impostazione predefinita `False`, il compilatore genera un avviso se si prova a usare l'elemento.</span><span class="sxs-lookup"><span data-stu-id="34a75-107">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
   
- <span data-ttu-id="e3182-108">Per impostazione predefinita, si tratta di un messaggio di avviso perché la proprietà <xref:System.ObsoleteAttribute.IsError%2A> di <xref:System.ObsoleteAttribute> è `False`.</span><span class="sxs-lookup"><span data-stu-id="e3182-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="e3182-109">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="e3182-109">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="34a75-108">Per impostazione predefinita, si tratta di un messaggio di avviso perché la proprietà <xref:System.ObsoleteAttribute.IsError%2A> di <xref:System.ObsoleteAttribute> è `False`.</span><span class="sxs-lookup"><span data-stu-id="34a75-108">By default, this message is a warning, because the <xref:System.ObsoleteAttribute.IsError%2A> property of <xref:System.ObsoleteAttribute> is `False`.</span></span> <span data-ttu-id="34a75-109">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="34a75-109">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="e3182-110">**ID errore:** BC40020</span><span class="sxs-lookup"><span data-stu-id="e3182-110">**Error ID:** BC40020</span></span>  
+ <span data-ttu-id="34a75-110">**ID errore:** BC40020</span><span class="sxs-lookup"><span data-stu-id="34a75-110">**Error ID:** BC40020</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e3182-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3182-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="34a75-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="34a75-111">To correct this error</span></span>  
   
-1. <span data-ttu-id="e3182-112">Verificare che nel riferimento del codice sorgente il nome della proprietà sia stato digitato correttamente.</span><span class="sxs-lookup"><span data-stu-id="e3182-112">Ensure that the source-code reference is spelling the property name correctly.</span></span>  
+1. <span data-ttu-id="34a75-112">Verificare che nel riferimento del codice sorgente il nome della proprietà sia stato digitato correttamente.</span><span class="sxs-lookup"><span data-stu-id="34a75-112">Ensure that the source-code reference is spelling the property name correctly.</span></span>  
   
-2. <span data-ttu-id="e3182-113">Evitare l'accesso alla proprietà nel modo (lettura o scrittura) che ha generato questo messaggio.</span><span class="sxs-lookup"><span data-stu-id="e3182-113">Avoid accessing the property in the way (reading or writing) that generated this message.</span></span>  
+2. <span data-ttu-id="34a75-113">Evitare l'accesso alla proprietà nel modo (lettura o scrittura) che ha generato questo messaggio.</span><span class="sxs-lookup"><span data-stu-id="34a75-113">Avoid accessing the property in the way (reading or writing) that generated this message.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e3182-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3182-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="34a75-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="34a75-114">See also</span></span>
 
-- [<span data-ttu-id="e3182-115">Routine Property</span><span class="sxs-lookup"><span data-stu-id="e3182-115">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="34a75-115">Routine Property</span><span class="sxs-lookup"><span data-stu-id="34a75-115">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
