--- a/docs/visual-basic/misc/bc42020.md
+++ b/docs/visual-basic/misc/bc42020.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42020
 ms.assetid: 9422b16d-39b5-4d49-b697-608226ccafea
-ms.openlocfilehash: 74b478f13558aaf2ac6f6dfc8c7ad07efa3b53ee
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 6cc39f023174f60f771abe4c365cbeb6f2ff7d42
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913101"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395715"
 ---
-# <a name="variable-declaration-without-an-as-clause-type-of-object-assumed"></a><span data-ttu-id="2ba51-102">Dichiarazione di variabile senza una clausola 'As'. Verrà usato il tipo Object</span><span class="sxs-lookup"><span data-stu-id="2ba51-102">Variable declaration without an 'As' clause; type of Object assumed</span></span>
-<span data-ttu-id="2ba51-103">Una dichiarazione di variabile non specifica una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="2ba51-103">A variable declaration does not specify an `As` clause.</span></span>  
+# <a name="variable-declaration-without-an-as-clause-type-of-object-assumed"></a><span data-ttu-id="f2ee1-102">Dichiarazione di variabile senza una clausola 'As'. Verrà usato il tipo Object</span><span class="sxs-lookup"><span data-stu-id="f2ee1-102">Variable declaration without an 'As' clause; type of Object assumed</span></span>
+<span data-ttu-id="f2ee1-103">Una dichiarazione di variabile non specifica una clausola `As` .</span><span class="sxs-lookup"><span data-stu-id="f2ee1-103">A variable declaration does not specify an `As` clause.</span></span>  
   
- <span data-ttu-id="2ba51-104">Una clausola `As` identifica un tipo di dati da associare a un elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="2ba51-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="2ba51-105">In un [istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md), specifica il tipo di dati della variabile o variabili.</span><span class="sxs-lookup"><span data-stu-id="2ba51-105">In a [Dim Statement](../../visual-basic/language-reference/statements/dim-statement.md), it specifies the data type of the variable or variables.</span></span> <span data-ttu-id="2ba51-106">Se non si include una clausola `As` nell'istruzione `Dim` , il tipo di dati della variabile sarà `Object`.</span><span class="sxs-lookup"><span data-stu-id="2ba51-106">If you do not include an `As` clause in the `Dim` statement, the variable's data type defaults to `Object`.</span></span>  
+ <span data-ttu-id="f2ee1-104">Una clausola `As` identifica un tipo di dati da associare a un elemento di programmazione.</span><span class="sxs-lookup"><span data-stu-id="f2ee1-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="f2ee1-105">In un' [istruzione Dim](../language-reference/statements/dim-statement.md)specifica il tipo di dati della variabile o delle variabili.</span><span class="sxs-lookup"><span data-stu-id="f2ee1-105">In a [Dim Statement](../language-reference/statements/dim-statement.md), it specifies the data type of the variable or variables.</span></span> <span data-ttu-id="f2ee1-106">Se non si include una clausola `As` nell'istruzione `Dim` , il tipo di dati della variabile sarà `Object`.</span><span class="sxs-lookup"><span data-stu-id="f2ee1-106">If you do not include an `As` clause in the `Dim` statement, the variable's data type defaults to `Object`.</span></span>  
   
- <span data-ttu-id="2ba51-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="2ba51-107">By default, this message is a warning.</span></span> <span data-ttu-id="2ba51-108">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="2ba51-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="f2ee1-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="f2ee1-107">By default, this message is a warning.</span></span> <span data-ttu-id="f2ee1-108">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="f2ee1-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="2ba51-109">**ID errore:** BC42020</span><span class="sxs-lookup"><span data-stu-id="2ba51-109">**Error ID:** BC42020</span></span>  
+ <span data-ttu-id="f2ee1-109">**ID errore:** BC42020</span><span class="sxs-lookup"><span data-stu-id="f2ee1-109">**Error ID:** BC42020</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2ba51-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2ba51-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f2ee1-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f2ee1-110">To correct this error</span></span>  
   
-- <span data-ttu-id="2ba51-111">Includere una clausola `As` nell'istruzione `Dim` per specificare il tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="2ba51-111">Include an `As` clause in the `Dim` statement to specify the variable's data type.</span></span>  
+- <span data-ttu-id="f2ee1-111">Includere una clausola `As` nell'istruzione `Dim` per specificare il tipo di dati della variabile.</span><span class="sxs-lookup"><span data-stu-id="f2ee1-111">Include an `As` clause in the `Dim` statement to specify the variable's data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2ba51-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2ba51-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f2ee1-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f2ee1-112">See also</span></span>
 
-- [<span data-ttu-id="2ba51-113">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="2ba51-113">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="2ba51-114">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="2ba51-114">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="f2ee1-113">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="f2ee1-113">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="f2ee1-114">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="f2ee1-114">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
