--- a/docs/visual-basic/misc/bc42036.md
+++ b/docs/visual-basic/misc/bc42036.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC42036
 ms.assetid: f11e9c9f-aa66-4eb1-8f49-abf713bef885
-ms.openlocfilehash: f7129b4d2195543af58a7bb85ba62b725cef374e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 593c0e5c3f68b312cf8ce3ccbddb090047c8b258
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395233"
 ---
-# <a name="operands-of-type-object-used-in-expressions-for-select-case-statements-runtime-errors-could-occur"></a><span data-ttu-id="def39-102">Operandi di tipo Object usati in espressioni per istruzioni 'Select' e 'Case'; potrebbero verificarsi errori in fase di esecuzione</span><span class="sxs-lookup"><span data-stu-id="def39-102">Operands of type Object used in expressions for 'Select', 'Case' statements; runtime errors could occur</span></span>
-<span data-ttu-id="def39-103">Una costruzione `Select`...`Case` usa una o più espressioni del [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="def39-103">A `Select`...`Case` construction uses one or more expressions of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="operands-of-type-object-used-in-expressions-for-select-case-statements-runtime-errors-could-occur"></a><span data-ttu-id="57e59-102">Operandi di tipo Object usati in espressioni per istruzioni 'Select' e 'Case'; potrebbero verificarsi errori in fase di esecuzione</span><span class="sxs-lookup"><span data-stu-id="57e59-102">Operands of type Object used in expressions for 'Select', 'Case' statements; runtime errors could occur</span></span>
+<span data-ttu-id="57e59-103">Una costruzione `Select`...`Case` usa una o più espressioni del [Object Data Type](../language-reference/data-types/object-data-type.md).</span><span class="sxs-lookup"><span data-stu-id="57e59-103">A `Select`...`Case` construction uses one or more expressions of the [Object Data Type](../language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="def39-104">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="def39-104">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="def39-105">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="def39-105">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="def39-106">Se ad esempio si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi si prova a confrontarla con un numero, viene generata un'eccezione <xref:System.InvalidCastException> perché Visual Basic non supporta la conversione di un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.</span><span class="sxs-lookup"><span data-stu-id="def39-106">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to compare it with a number, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a numeric value.</span></span>  
+ <span data-ttu-id="57e59-104">Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione.</span><span class="sxs-lookup"><span data-stu-id="57e59-104">When a variable or expression evaluates to `Object`, the compiler must perform *late binding*, which causes extra operations at run time.</span></span> <span data-ttu-id="57e59-105">Espone inoltre l'applicazione a possibili errori di runtime.</span><span class="sxs-lookup"><span data-stu-id="57e59-105">It also exposes your application to potential run-time errors.</span></span> <span data-ttu-id="57e59-106">Se ad esempio si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi si prova a confrontarla con un numero, viene generata un'eccezione <xref:System.InvalidCastException> perché Visual Basic non supporta la conversione di un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.</span><span class="sxs-lookup"><span data-stu-id="57e59-106">For example, if you assign a <xref:System.Windows.Forms.Form> to an `Object` variable and then try to compare it with a number, the runtime throws an <xref:System.InvalidCastException> because Visual Basic cannot convert a <xref:System.Windows.Forms.Form> object to a numeric value.</span></span>  
   
- <span data-ttu-id="def39-107">Le espressioni contenute in una costruzione `Select`...`Case` devono presentare tutte lo stesso tipo di dati oppure tipi di dati strettamente correlati e convertibili tra di loro.</span><span class="sxs-lookup"><span data-stu-id="def39-107">The expressions in a `Select`...`Case` construction should all be of the same data type or of closely related data types that can be converted to each other.</span></span> <span data-ttu-id="def39-108">Questo perché almeno un valore di ogni istruzione `Case` viene confrontato con l'espressione di test sulla quale si basa la costruzione `Select`...`Case` .</span><span class="sxs-lookup"><span data-stu-id="def39-108">This is because each `Case` statement compares at least one value against the test expression on which the `Select`...`Case` construction is based.</span></span>  
+ <span data-ttu-id="57e59-107">Le espressioni contenute in una costruzione `Select`...`Case` devono presentare tutte lo stesso tipo di dati oppure tipi di dati strettamente correlati e convertibili tra di loro.</span><span class="sxs-lookup"><span data-stu-id="57e59-107">The expressions in a `Select`...`Case` construction should all be of the same data type or of closely related data types that can be converted to each other.</span></span> <span data-ttu-id="57e59-108">Questo perché almeno un valore di ogni istruzione `Case` viene confrontato con l'espressione di test sulla quale si basa la costruzione `Select`...`Case` .</span><span class="sxs-lookup"><span data-stu-id="57e59-108">This is because each `Case` statement compares at least one value against the test expression on which the `Select`...`Case` construction is based.</span></span>  
   
- <span data-ttu-id="def39-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="def39-109">By default, this message is a warning.</span></span> <span data-ttu-id="def39-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="def39-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="57e59-109">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="57e59-109">By default, this message is a warning.</span></span> <span data-ttu-id="57e59-110">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="57e59-110">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="def39-111">**ID errore:** BC42036</span><span class="sxs-lookup"><span data-stu-id="def39-111">**Error ID:** BC42036</span></span>  
+ <span data-ttu-id="57e59-111">**ID errore:** BC42036</span><span class="sxs-lookup"><span data-stu-id="57e59-111">**Error ID:** BC42036</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="def39-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="def39-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="57e59-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="57e59-112">To correct this error</span></span>  
   
-- <span data-ttu-id="def39-113">Se possibile, organizzare tutte le espressioni in modo che restituiscano i tipi di dati per i quali sono stati definiti gli operatori di confronto.</span><span class="sxs-lookup"><span data-stu-id="def39-113">If possible, arrange all the expressions to evaluate to data types for which comparison operators are defined.</span></span>  
+- <span data-ttu-id="57e59-113">Se possibile, organizzare tutte le espressioni in modo che restituiscano i tipi di dati per i quali sono stati definiti gli operatori di confronto.</span><span class="sxs-lookup"><span data-stu-id="57e59-113">If possible, arrange all the expressions to evaluate to data types for which comparison operators are defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="def39-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="def39-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="57e59-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="57e59-114">See also</span></span>
 
-- [<span data-ttu-id="def39-115">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="def39-115">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
-- [<span data-ttu-id="def39-116">Operatori aritmetici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="def39-116">Arithmetic Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
-- [<span data-ttu-id="def39-117">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="def39-117">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="57e59-115">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="57e59-115">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="57e59-116">Operatori aritmetici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="57e59-116">Arithmetic Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
+- [<span data-ttu-id="57e59-117">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="57e59-117">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
