commit translated contents

--- a/docs/visual-basic/misc/bc2011.md
+++ b/docs/visual-basic/misc/bc2011.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile aprire il file di risposta '<filename>'
+title: Non è possibile aprire il file di risposta ' <filename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc2011
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2011
 ms.assetid: 07e799b6-797a-49b5-9e4e-081ae0c68653
-ms.openlocfilehash: 7d0f772fe57c61436c42227297910e08b3db4e33
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 62ab3226f8f64a9d757b7689b982594dc39c9f90
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64658747"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367334"
 ---
-# <a name="unable-to-open-response-file-filename"></a>Impossibile aprire il file di risposta '\<nomefile >'
+# <a name="unable-to-open-response-file-filename"></a>Non è possibile aprire il file di risposta ' \<filename> '
 Il file a cui si sta tentando di accedere non è disponibile.  
   
  **ID errore:** BC2011  
@@ -28,4 +28,4 @@ Il file a cui si sta tentando di accedere non è disponibile.
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Security.Permissions.FileIOPermission>
-- [Tipi di errore](../../visual-basic/programming-guide/language-features/error-types.md)
+- [Tipi di errore](../programming-guide/language-features/error-types.md)
