--- a/docs/visual-basic/misc/bc30021.md
+++ b/docs/visual-basic/misc/bc30021.md
@@ -1,5 +1,5 @@
 ---
-title: "' TypeOf... È ' operando sinistro deve avere un tipo riferimento, ma questo operando ha il tipo '<type>'"
+title: "' TypeOf... Is ' richiede che l'operando di sinistra abbia un tipo riferimento, ma questo operando ha il tipo ' <type> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30021
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30021
 ms.assetid: a6e76fc8-9c7f-4e55-8b68-e6e7b03a6737
-ms.openlocfilehash: 8998c48eb0168252b7710e5321bc0965ab865952
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 91e79ac8623964f3cdea8eb76a396a0792f710fb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584181"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366645"
 ---
-# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-type"></a>' TypeOf... È ' operando sinistro deve avere un tipo riferimento, ma questo operando ha il tipo '\<tipo >'
+# <a name="typeofis-requires-its-left-operand-to-have-a-reference-type-but-this-operand-has-the-type-type"></a>' TypeOf... Is ' richiede che l'operando di sinistra abbia un tipo riferimento, ma questo operando ha il tipo ' \<type> '
 L'espressione `TypeOf...Is` controlla la compatibilità dei tipi in fase di esecuzione di una variabile oggetto. Questa compatibilità non è definita per i tipi valore.  
   
  **ID errore:** BC30021  
@@ -27,6 +27,6 @@ L'espressione `TypeOf...Is` controlla la compatibilità dei tipi in fase di esec
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
 
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
