--- a/docs/visual-basic/misc/bc30311.md
+++ b/docs/visual-basic/misc/bc30311.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - BC30311
 ms.assetid: e3a513d4-2a1e-46d6-b592-b2e756b89d7d
-ms.openlocfilehash: 989de1d8a86215c0ef9da1c1a4c706085f51e268
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 18191fed9270c612c184ea4552822c94404e9731
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513086"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406145"
 ---
-# <a name="value-of-type-type1-cannot-be-converted-to-type2"></a>Il valore di tipo\<' tipo1 >' non può essere convertito\<in ' tipo2 >'
+# <a name="value-of-type-type1-cannot-be-converted-to-type2"></a>Impossibile convertire il valore di tipo '\<type1>' in '\<type2>'
 
 Un'istruzione prova a convertire un tipo di dati in un altro usando una procedura non definita. Alcune cause possibili di questo errore sono:
 
 - Una conversione specifica due tipi di dati tra cui non viene eseguita alcuna conversione. Un esempio può essere una conversione da un valore `Boolean` al tipo `Date` .
 
-- L'inizializzazione di una matrice non comprende parentesi graffe (`{}`) dopo una clausola `New` . In questo caso, \<tipo2 > è nel formato "matrice unidimensionale di \<tipo >".
+- L'inizializzazione di una matrice non comprende parentesi graffe (`{}`) dopo una clausola `New` . In questo caso \<type2> il formato è "matrice unidimensionale di \<type> ".
 
 **ID errore:** BC30311
 
@@ -28,7 +28,7 @@ Un'istruzione prova a convertire un tipo di dati in un altro usando una procedur
 
 - Accertarsi che l'espressione possa essere convertita nel tipo di dati di destinazione.
 
-- Se \<tipo2 > è una matrice, assicurarsi che la `New` clausola includa sia le parentesi sia le parentesi graffe che seguono il nome del tipo. Il codice seguente illustra la corretta inizializzazione di una matrice.
+- Se \<type2> è una matrice, assicurarsi che la `New` clausola includa sia le parentesi sia le parentesi graffe che seguono il nome del tipo. Il codice seguente illustra la corretta inizializzazione di una matrice.
 
   ```vb
   Dim anIntArray As Integer() = New Integer() {}
@@ -36,5 +36,5 @@ Un'istruzione prova a convertire un tipo di dati in un altro usando una procedur
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
-- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
+- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
