--- a/docs/visual-basic/misc/bc30433.md
+++ b/docs/visual-basic/misc/bc30433.md
@@ -1,5 +1,5 @@
 ---
-title: I metodi in un modulo non possono essere dichiarati '<specifier>'
+title: I metodi in un modulo non possono essere dichiarati ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30433
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30433
 ms.assetid: e9fa204c-a40f-439e-95bb-048a89a19159
-ms.openlocfilehash: 702330f75c3c20311d0b45f8ffcb57a59f76595b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0789b4d8903c59b681ea6db7f6af904d11de523f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589678"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84397012"
 ---
-# <a name="methods-in-a-module-cannot-be-declared-specifier"></a>I metodi in un modulo non possono essere dichiarati '\<identificatore >'
+# <a name="methods-in-a-module-cannot-be-declared-specifier"></a>I metodi in un modulo non possono essere dichiarati ' \<specifier> '
 È stato usato un identificatore non valido in un metodo all'interno di un'istruzione `Module` . Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.  
   
  **ID errore:** BC30433  
@@ -25,4 +25,4 @@ ms.locfileid: "64589678"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
