--- a/docs/visual-basic/misc/bc30734.md
+++ b/docs/visual-basic/misc/bc30734.md
@@ -1,5 +1,5 @@
 ---
-title: "'<name>' è già dichiarato come parametro di questo metodo"
+title: "' <name> ' è già dichiarato come parametro di questo metodo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30734
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30734
 ms.assetid: e13585cd-4d77-491c-ae2a-e65260c5afc6
-ms.openlocfilehash: 38df816153e44d878368b3136ef5087b285b865a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 91afcecd22a4884792c401c68815a9edc026b7ba
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646163"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405950"
 ---
-# <a name="name-is-already-declared-as-a-parameter-of-this-method"></a>'\<nome >' è già dichiarato come parametro di questo metodo
+# <a name="name-is-already-declared-as-a-parameter-of-this-method"></a>' \<name> ' è già dichiarato come parametro di questo metodo
 Il nome del parametro specificato è già stato dichiarato per questo metodo.  
   
  **ID errore:** BC30734  
@@ -25,4 +25,4 @@ Il nome del parametro specificato è già stato dichiarato per questo metodo.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
