--- a/docs/visual-basic/misc/bc30786.md
+++ b/docs/visual-basic/misc/bc30786.md
@@ -1,5 +1,5 @@
 ---
-title: Dichiarare le istruzioni in un modulo non possono essere dichiarate '<specifier>'
+title: Le istruzioni Declare in un modulo non possono essere dichiarate ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30786
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30786
 ms.assetid: 488b855f-72ea-414b-bffc-a5b63e97d289
-ms.openlocfilehash: a6d1cf16573657ea875ddb539255c9c05710dc4a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5946b49b6766d226b00cbb6bbd7d97684e13eed6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589379"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389384"
 ---
-# <a name="declare-statements-in-a-module-cannot-be-declared-specifier"></a>Dichiarare le istruzioni in un modulo non possono essere dichiarate '\<identificatore >'
+# <a name="declare-statements-in-a-module-cannot-be-declared-specifier"></a>Le istruzioni Declare in un modulo non possono essere dichiarate ' \<specifier> '
 Una dichiarazione `Declare` contiene un identificatore che non è valido all'interno di una dichiarazione `Module` . Non è possibile creare istanze dei moduli, i moduli non supportano l'ereditarietà e non possono implementare le interfacce.  
   
  **ID errore:** BC30786  
@@ -25,5 +25,5 @@ Una dichiarazione `Declare` contiene un identificatore che non è valido all'int
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
