--- a/docs/visual-basic/misc/bc31071.md
+++ b/docs/visual-basic/misc/bc31071.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura in un'interfaccia non può essere dichiarata '<specifier>'
+title: La struttura in un'interfaccia non può essere dichiarata come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31071
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31071
 ms.assetid: 3ab95933-23d8-4d95-80be-552570dd69cb
-ms.openlocfilehash: 5150b5e3bdf1096cfd092c3f5dff49ecd8917555
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fc9dde17fcf5cb505c96df884dec94d69cf451a7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619295"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405768"
 ---
-# <a name="structure-in-an-interface-cannot-be-declared-specifier"></a>Struttura in un'interfaccia non può essere dichiarata '\<identificatore >'
+# <a name="structure-in-an-interface-cannot-be-declared-specifier"></a>La struttura in un'interfaccia non può essere dichiarata come ' \<specifier> '
 Il modificatore specificato con la struttura dichiarata nell'interfaccia non è valido.  
   
  **ID errore:** BC31071  
@@ -25,5 +25,5 @@ Il modificatore specificato con la struttura dichiarata nell'interfaccia non è 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
