--- a/docs/visual-basic/misc/bc31137.md
+++ b/docs/visual-basic/misc/bc31137.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '<signature>' dell'evento che lo contiene
+title: Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '' dell'evento che lo contiene <signature>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31137
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31137
 ms.assetid: 9db77546-9205-4fd2-baf6-6eb1b46b1f1a
-ms.openlocfilehash: c49e93401eaf639423406c4f04f8fe0a5bf941ad
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: a1bdcab42daf70df689b9e0fbcdaca347da9be42
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664523"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414712"
 ---
-# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a>Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato dell'evento contenitore '\<Signature >'
+# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a>Il metodo ' RaiseEvent ' deve avere la stessa firma del tipo delegato '' dell'evento che lo contiene \<signature>
 Una dichiarazione `Custom Event` deve avere la dichiarazione `RaiseEvent` con la stessa firma del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.  
   
  Affinché le firme corrispondano, è necessario che la dichiarazione `RaiseEvent` e il delegato corrispondano in termini di numero e tipi di parametri.  
@@ -32,7 +32,7 @@ Una dichiarazione `Custom Event` deve avere la dichiarazione `RaiseEvent` con la
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Events](../programming-guide/language-features/events/index.md)
