--- a/docs/visual-basic/misc/bc31517.md
+++ b/docs/visual-basic/misc/bc31517.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non può essere usato come attributo perché il relativo contenitore '<containername>' non è dichiarato 'Public'
+title: Non è possibile usare il tipo '<typename>' perché il relativo contenitore '<containername>' non è dichiarato come 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31517
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31517
 ms.assetid: 3d1a8f41-8652-4e37-a6bd-40b0ad306c6f
-ms.openlocfilehash: 266c87c9179db1c204f9d11d33f261f99243cffd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 9aa80a48b64414fd73531ae2a62814e016051ca4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61789142"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365878"
 ---
-# <a name="type-typename-cannot-be-used-as-an-attribute-because-its-container-containername-is-not-declared-public"></a>Tipo '\<nomeTipo >' non può essere usato come attributo perché il relativo contenitore '\<nomecontenitore >' non è dichiarato 'Public'
+# <a name="type-typename-cannot-be-used-as-an-attribute-because-its-container-containername-is-not-declared-public"></a>Non è possibile usare il tipo '\<typename>' perché il relativo contenitore '\<containername>' non è dichiarato come 'Public'
 La classe o il modulo in cui è definito questo attributo non è dichiarato con il modificatore `Public` . Le classi e i moduli che non specificano un modificatore di accesso vengono dichiarati come `Friend` per impostazione predefinita.  
   
  **ID errore:** BC31517  
@@ -25,4 +25,4 @@ La classe o il modulo in cui è definito questo attributo non è dichiarato con 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Public](../../visual-basic/language-reference/modifiers/public.md)
+- [Pubblica](../language-reference/modifiers/public.md)
