--- a/docs/visual-basic/misc/bc42004.md
+++ b/docs/visual-basic/misc/bc42004.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione in modo ricorsivo chiama l'operatore che lo contiene '<operatorsymbol>'
+title: L'espressione chiama in modo ricorsivo l'operatore ' <operatorsymbol> '
 ms.date: 07/20/2015
 f1_keywords:
 - BC42004
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42004
 ms.assetid: a874c44a-3aec-447d-90f7-5659f1b2f5f6
-ms.openlocfilehash: c64902a74a94c3f59296cbb1f7f36296de69ea7c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 53ea2d2d590d2585c0aed2f2f37ced0a67f4f16d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627264"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396934"
 ---
-# <a name="expression-recursively-calls-containing-operator-operatorsymbol"></a>Espressione in modo ricorsivo chiama l'operatore che lo contiene '\<simbolooperatore >'
+# <a name="expression-recursively-calls-containing-operator-operatorsymbol"></a>L'espressione chiama in modo ricorsivo l'operatore ' \<operatorsymbol> '
 Un'espressione all'interno di una routine di operatore usa l'operatore da definire. Questo fa sì che la routine di operatore chiami se stessa per effetto dei tipi di dati usati.  
   
  La routine di operatore che si sta definendo chiama se stessa se usa lo stesso operatore con uno degli operandi specificati di seguito:  
@@ -39,7 +39,7 @@ Un'espressione all'interno di una routine di operatore usa l'operatore da defini
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
