--- a/docs/visual-basic/misc/bc30058.md
+++ b/docs/visual-basic/misc/bc30058.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30058
 ms.assetid: 399b4659-f7df-4377-80be-43019f1e6206
-ms.openlocfilehash: b9470b568d21b8963fe22919a1a0b6f0918f5b65
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: aa37bbd4b78d8b5294b9cf3082c0d2573e9100e4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649872"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391482"
 ---
 # <a name="statements-and-labels-are-not-valid-between-select-case-and-first-case"></a>Istruzioni ed etichette non sono valide tra 'Select Case' e la prima clausola 'Case'
 Tra l'istruzione `Select` o `Select Case` di apertura e la relativa prima istruzione `Case` viene visualizzata un'istruzione che non è un commento.  
@@ -25,4 +25,4 @@ Tra l'istruzione `Select` o `Select Case` di apertura e la relativa prima istruz
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
