--- a/docs/visual-basic/misc/bc30183.md
+++ b/docs/visual-basic/misc/bc30183.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30183
 ms.assetid: 37206d31-4247-414c-88d0-ebba1b00f10c
-ms.openlocfilehash: 9273daac97783334d761469162e3af13a544a04f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c854c3d3d0757275fb8cf02893fea9a392bfcc1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627483"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403953"
 ---
 # <a name="keyword-is-not-valid-as-an-identifier"></a>La parola chiave non è valida come identificatore
 Una parola chiave viene visualizzata nel punto in cui è richiesto il nome di un elemento. Il contesto chiama una variabile o una routine.  
@@ -25,4 +25,4 @@ Una parola chiave viene visualizzata nel punto in cui è richiesto il nome di un
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori ed espressioni](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [Operatori ed espressioni](../programming-guide/language-features/operators-and-expressions/index.md)
