--- a/docs/visual-basic/misc/bc30209.md
+++ b/docs/visual-basic/misc/bc30209.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30209
 ms.assetid: 69c2e32a-86aa-4075-a142-440605a7063a
-ms.openlocfilehash: b4334ec579ece4871a0904933c0f7c111b8e8cc4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 40fbf28a774a5992828dbf8cd9704dd5325dbbbe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028070"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409205"
 ---
 # <a name="option-strict-on-requires-all-variable-declarations-to-have-an-as-clause"></a>Option Strict On richiede che tutte le dichiarazioni di variabili abbiano una clausola 'As'
 Una dichiarazione contiene una variabile dichiarata senza una clausola `As` . Quando `Option Strict` è `On`, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Dim MyNum As Short`.  
@@ -27,5 +27,5 @@ Una dichiarazione contiene una variabile dichiarata senza una clausola `As` . Qu
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [Dichiarazione di variabile](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
+- [Dichiarazione di variabile](../programming-guide/language-features/variables/variable-declaration.md)
