--- a/docs/visual-basic/misc/bc30280.md
+++ b/docs/visual-basic/misc/bc30280.md
@@ -1,5 +1,5 @@
 ---
-title: Enum '<enumname>' deve contenere almeno un membro
+title: L'enumerazione '<enumname>' deve contenere almeno un membro
 ms.date: 07/20/2015
 f1_keywords:
 - bc30280
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30280
 ms.assetid: eece372a-f87f-4270-ba66-5ff68f0dfb5e
-ms.openlocfilehash: 31e873e5b40ecce875975e8da5bf347b9830193d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: dd45f7ac20b52fcf1709d68a4fce9a1a98cc7671
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794823"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390767"
 ---
-# <a name="enum-enumname-must-contain-at-least-one-member"></a>Enum '\<nomeenumerazione >' deve contenere almeno un membro
+# <a name="enum-enumname-must-contain-at-least-one-member"></a>L'enumerazione '\<enumname>' deve contenere almeno un membro
 Si verifica un'enumerazione vuota. Almeno un membro deve essere dichiarato tra le istruzioni `Enum` e `End Enum` .  
   
  **ID errore:** BC30280  
@@ -25,4 +25,4 @@ Si verifica un'enumerazione vuota. Almeno un membro deve essere dichiarato tra l
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Enum](../../visual-basic/language-reference/statements/enum-statement.md)
+- [Istruzione Enum](../language-reference/statements/enum-statement.md)
