--- a/docs/visual-basic/misc/bc30287.md
+++ b/docs/visual-basic/misc/bc30287.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30287
 ms.assetid: 7d7b4934-b521-4ed3-b054-aeb71f8daacf
-ms.openlocfilehash: 44571845215c45749532d66c3e4c64d355741609
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e3cabc779cf24332ab7cdfdd45005ff97f903a6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794797"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390669"
 ---
 # <a name="-expected"></a>È previsto il punto ('.')
 Il codice ha una clausola `Handles` che contiene un punto esclamativo (`!`).  
@@ -29,4 +29,4 @@ Il codice ha una clausola `Handles` che contiene un punto esclamativo (`!`).
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Handles](../../visual-basic/language-reference/statements/handles-clause.md)
+- [Selettori](../language-reference/statements/handles-clause.md)
