--- a/docs/visual-basic/misc/bc30293.md
+++ b/docs/visual-basic/misc/bc30293.md
@@ -1,5 +1,5 @@
 ---
-title: "<error>: '<structurename1>'contiene'<structurename2>'"
+title: <error>:' <structurename1> ' contiene ' <structurename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30293
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30293
 ms.assetid: c9d225e7-0627-4682-97f2-fd9c7be2842b
-ms.openlocfilehash: b99791686ffa2633e74c41cd384b2106b387ada5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 257a52e75e0f3ae33385066a829658800955cbab
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663970"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390474"
 ---
-# <a name="error-structurename1-contains-structurename2"></a>\<errore >: '\<structurename1 >' contiene '\<structurename2 >'
+# <a name="error-structurename1-contains-structurename2"></a>\<error>:' \<structurename1> ' contiene ' \<structurename2> '
 Una definizione di struttura circolare è presente quando una struttura designa se stessa come uno dei propri membri.  
   
  **ID errore:** BC30293  
@@ -25,4 +25,4 @@ Una definizione di struttura circolare è presente quando una struttura designa 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+- [Strutture](../programming-guide/language-features/data-types/structures.md)
