--- a/docs/visual-basic/misc/bc30367.md
+++ b/docs/visual-basic/misc/bc30367.md
@@ -1,5 +1,5 @@
 ---
-title: Classe<classname>' non può essere indicizzata perché non contiene proprietà predefinite
+title: Impossibile indicizzare la classe '<classname>' perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - bc30367
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30367
 ms.assetid: bcccde7e-4433-459f-a060-7236902fc05e
-ms.openlocfilehash: 859f86e58cc357fd9ae16c0064f4c2a89c983354
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b410408b1365fc51bdaa329f49fd2c1cc84186d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663140"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403849"
 ---
-# <a name="class-classname-cannot-be-indexed-because-it-has-no-default-property"></a>Classe\<NomeClasse >' non può essere indicizzata perché non contiene proprietà predefinite
+# <a name="class-classname-cannot-be-indexed-because-it-has-no-default-property"></a>Impossibile indicizzare la classe '\<classname>' perché non contiene proprietà predefinite
 Non è stato possibile specificare una proprietà predefinita per una classe.  
   
  **ID errore:** BC30367  
@@ -25,4 +25,4 @@ Non è stato possibile specificare una proprietà predefinita per una classe.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Default](../../visual-basic/language-reference/modifiers/default.md)
+- [Default](../language-reference/modifiers/default.md)
