--- a/docs/visual-basic/misc/bc30532.md
+++ b/docs/visual-basic/misc/bc30532.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30532
 ms.assetid: 8171ce21-e4f6-4e75-b7e8-32baf78a40eb
-ms.openlocfilehash: 61d833cee79be92ac098cb503f8bb7a755b7e1fe
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 53dff360e2f368d8101936b1bfc9fd1a2121c0d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625207"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386458"
 ---
 # <a name="conversion-from-date-to-double-requires-calling-the-datetooadate-method"></a>Per la conversione da 'Double' a 'Date' è necessario chiamare il metodo 'Date.ToOADate'
 Si è provato a eseguire il cast di un valore `Date` a un valore `Double` , operazione che non può essere eseguita senza usare il metodo <xref:System.DateTime.ToOADate%2A?displayProperty=nameWithType> .  
@@ -25,4 +25,4 @@ Si è provato a eseguire il cast di un valore `Date` a un valore `Double` , oper
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
