--- a/docs/visual-basic/misc/bc30672.md
+++ b/docs/visual-basic/misc/bc30672.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30672
 ms.assetid: 4b525e8d-bde5-4408-8c10-7605ca039f0e
-ms.openlocfilehash: 3881170b13f95b9e8a379f3d437ddd7ab9c446a7
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 071c2815c6cbb9937b82eecb201547dda1d997f6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512952"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414868"
 ---
 # <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a>Inizializzazione esplicita non consentita per matrici dichiarate con limiti espliciti
 
@@ -33,4 +33,4 @@ Non è possibile inizializzare le matrici se vengono dichiarate con dimensioni s
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
