--- a/docs/visual-basic/misc/bc31125.md
+++ b/docs/visual-basic/misc/bc31125.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31125
 ms.assetid: 754a0017-ec55-4d62-a7bd-c84ece058455
-ms.openlocfilehash: 3f93c06e354ec6a53dfb7a0e2c9c014dc4641164
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f863a7ebc8ffa728b6cf6a2b6551398498355f7e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585133"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396025"
 ---
 # <a name="end-removehandler-must-be-preceded-by-a-matching-removehandler-declaration"></a>'End RemoveHandler' deve essere preceduto da una dichiarazione 'RemoveHandler' corrispondente
 Un'istruzione `End RemoveHandler` si verifica senza un'istruzione `RemoveHandler` corrispondente. `End RemoveHandler` deve essere preceduto da un'istruzione `RemoveHandler` corrispondente.  
@@ -25,5 +25,5 @@ Un'istruzione `End RemoveHandler` si verifica senza un'istruzione `RemoveHandler
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RemoveHandler](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RemoveHandler](../language-reference/statements/removehandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
