--- a/docs/visual-basic/misc/bc31148.md
+++ b/docs/visual-basic/misc/bc31148.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31148
 ms.assetid: a3c55b04-4537-47c3-88e8-6e8044e9dc54
-ms.openlocfilehash: b8b85cbbc913f8a462c40ee4053d58dd425a5e0e
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 2a1380d35190fcc59af84ff2ac260d62cb75c4b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912602"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84386289"
 ---
 # <a name="xml-namespace-prefix-prefix-is-not-defined"></a>Il prefisso dello spazio dei nomi XML 'prefix' non è definito
 È stato specificato un prefisso dello spazio dei nomi XML non definito per un valore letterale XML o una proprietà axis XML.  
@@ -29,6 +29,6 @@ ms.locfileid: "64912602"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (spazio dei nomi XML)](../../visual-basic/language-reference/statements/imports-statement-xml-namespace.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Istruzione Imports (spazio dei nomi XML)](../language-reference/statements/imports-statement-xml-namespace.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
