--- a/docs/visual-basic/misc/bc31538.md
+++ b/docs/visual-basic/misc/bc31538.md
@@ -1,5 +1,5 @@
 ---
-title: Il <member> membro non può eseguire l'override del <baseMember> membri definito in un altro assembly-progetto perché il modificatore di accesso ' Protected Friend ' espande l'accessibilità. Usare 'Protected'.
+title: Il membro <member> non può eseguire l'override del membro <baseMember> definito in latro assembly-progetto perché il modificatore di accesso 'Protected Friend' espande l'accessibilità. Usare 'Protected'.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31538
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - BC31538
 ms.assetid: a0b13f40-eee2-46fd-9e85-11c3988f7a95
-ms.openlocfilehash: d50dc12557717eeb3ccf52eaf55815d0f68b03e0
-ms.sourcegitcommit: 1f12db2d852d05bed8c53845f0b5a57a762979c8
+ms.openlocfilehash: c139837c1d4f86eab43f97df4758c5bf161b34ab
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/18/2019
-ms.locfileid: "72580330"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412073"
 ---
-# <a name="member-member-cannot-override-member-basemember-defined-in-another-assemblyproject-because"></a>Il membro \<member > non può eseguire l'override del \<baseMember membro > definito in un altro assembly/progetto perché...
+# <a name="member-member-cannot-override-member-basemember-defined-in-another-assemblyproject-because"></a>Il membro \<member> non può eseguire l'override del membro \<baseMember> definito in un altro assembly/progetto perché...
 
 ## <a name="to-correct-this-error"></a>Per correggere l'errore
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Friend](../../visual-basic/language-reference/modifiers/friend.md)
-- [Protected](../../visual-basic/language-reference/modifiers/protected.md)
-- [Livelli di accesso in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [Amico](../language-reference/modifiers/friend.md)
+- [Protetto](../language-reference/modifiers/protected.md)
+- [Livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
