--- a/docs/visual-basic/misc/bc33112.md
+++ b/docs/visual-basic/misc/bc33112.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33112
 ms.assetid: 50b2a2ad-248d-4faa-820d-bcdf0e8b4aad
-ms.openlocfilehash: c01f4da2d77012b5af507c2913c50a5d9821a1cb
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 051d200da180d266f403090971eb6833c46a58b3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626510"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395908"
 ---
 # <a name="nullable-modifier-cannot-be-used-with-a-variable-whose-implicit-type-is-object"></a>Non è possibile usare il modificatore nullable con una variabile il cui tipo implicito è 'Object'
 Una dichiarazione di variabile include il modificatore di tipo nullable (?), ma non specifica un tipo o deduce un tipo assegnando un valore alla variabile dichiarata.  
@@ -27,4 +27,4 @@ Una dichiarazione di variabile include il modificatore di tipo nullable (?), ma 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di valori nullable](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [Tipi di valore Nullable](../programming-guide/language-features/data-types/nullable-value-types.md)
