--- a/docs/visual-basic/misc/bc36595.md
+++ b/docs/visual-basic/misc/bc36595.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36595
 ms.assetid: 4e7cc11e-f53d-4481-afb4-653a81d54483
-ms.openlocfilehash: 5ab8432a01f36ea20e49c382a9f637bb87f277b1
-ms.sourcegitcommit: 0be8a279af6d8a43e03141e349d3efd5d35f8767
-ms.translationtype: HT
+ms.openlocfilehash: b26ccea809148dace80da56b19608bc119e075e6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59294964"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402408"
 ---
 # <a name="method-cannot-contain-both-an-on-error-goto-statement-and-a-lambda-or-query-expression"></a>Il metodo non può contenere un'istruzione 'On Error GoTo' insieme a un'espressione lambda o di query
 Un metodo contiene sia un'istruzione `On Error Goto` che un'espressione lambda o una query LINQ. Non è possibile includere un'istruzione `On Error Goto` con un'espressione lambda o una query LINQ in un metodo.  
@@ -26,7 +26,7 @@ Un metodo contiene sia un'istruzione `On Error Goto` che un'espressione lambda o
 ## <a name="see-also"></a>Vedere anche
 
 - [Gestione e generazione di eccezioni in .NET](../../standard/exceptions/index.md)
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [Espressioni lambda](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [Istruzione On Error](../../visual-basic/language-reference/statements/on-error-statement.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [Istruzione On Error](../language-reference/statements/on-error-statement.md)
