--- a/docs/visual-basic/misc/bc36607.md
+++ b/docs/visual-basic/misc/bc36607.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36607
 ms.assetid: f390bca5-12fe-4fe1-bd86-7f8ab66dfbd8
-ms.openlocfilehash: aedcda6603f088b6c63e7d2761092cb75ae40d51
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 91cc722be720893046b886dcaa99f24b762996a0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266794"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407015"
 ---
 # <a name="in-expected"></a>Previsto 'In'
 Una clausola `From` o `Aggregate` è stata specificata senza un operatore `In` . L'operatore `In` viene usato per identificare la raccolta nella query.  
@@ -30,7 +30,7 @@ Dim names = From pers In people
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Clausola From](../../visual-basic/language-reference/queries/from-clause.md)
-- [Clausola Aggregate](../../visual-basic/language-reference/queries/aggregate-clause.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Clausola from](../language-reference/queries/from-clause.md)
+- [Aggregate Clause](../language-reference/queries/aggregate-clause.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
