--- a/docs/visual-basic/misc/bc36626.md
+++ b/docs/visual-basic/misc/bc36626.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile convertire l'espressione lambda<typename>in '' perché<typename>il tipo '' è dichiarato come ' MustInherit ' e non può essere creato
+title: Impossibile convertire l'espressione Lambda in '<typename>' perché il tipo '<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36626
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - BC36626
 ms.assetid: d8695228-85c7-432a-9979-0d9898035710
-ms.openlocfilehash: 65d99fb69b47ca46355b25fae25b9c28e1bff06d
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: a3a7a02a9986b6d1a8c18b4879843c0e07b87344
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667480"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398864"
 ---
-# <a name="lambda-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a>Non è possibile convertire l'espressione lambda\<in ' typeName >' perché\<il tipo ' typeName >' è dichiarato come ' MustInherit ' e non può essere creato
+# <a name="lambda-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a>Impossibile convertire l'espressione Lambda in '\<typename>' perché il tipo '\<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo
 Un'istruzione tenta di convertire un'espressione lambda in un tipo che può essere solo una classe base e non può essere usato per creare un'istanza.  
   
  **ID errore:** BC36626  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Espressioni lambda](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [MustInherit](../language-reference/modifiers/mustinherit.md)
 - [Nozioni fondamentali sull'ereditarietà (Visual Basic)](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
